--- a/artikel/03.tex
+++ b/artikel/03.tex
@@ -6,12 +6,12 @@
 
 \begin{enumerate}
 
-  \item Diese Verordnung findet Anwendung auf die Verarbeitung \hyperref[itm:04-1]{personenbezogener Daten}, soweit
+  \item Diese Verordnung findet Anwendung auf die \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]{personenbezogener Daten}, soweit
    diese im Rahmen der Tätigkeiten einer Niederlassung eines Verantwortlichen oder eines Auftragsverarbeiters in der
-   Union erfolgt, unabhängig davon, ob die Verarbeitung in der Union stattfindet.
+   Union erfolgt, unabhängig davon, ob die \hyperref[itm:04-2]{Verarbeitung} in der Union stattfindet.
   \label{itm:03-1}
 
-  \item Diese Verordnung findet Anwendung auf die Verarbeitung \hyperref[itm:04-1]{personenbezogener Daten} von
+  \item Diese Verordnung findet Anwendung auf die \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]{personenbezogener Daten} von
    \hyperref[itm:04-1]{betroffenen Personen}, die sich in der Union befinden, durch einen nicht in der Union niedergelassenen
    Verantwortlichen oder Auftragsverarbeiter, wenn die Datenverarbeitung im Zusammenhang damit steht
   \label{itm:03-2}
@@ -27,7 +27,7 @@
 
   \end{enumerate}
 
-  \item Diese Verordnung findet Anwendung auf die Verarbeitung \hyperref[itm:04-1]{personenbezogener Daten} durch einen
+  \item Diese Verordnung findet Anwendung auf die \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]{personenbezogener Daten} durch einen
    nicht in der Union niedergelassenen Verantwortlichen an einem Ort, der aufgrund Völkerrechts dem Recht eines
    Mitgliedstaats unterliegt.
   \label{itm:03-3}
