--- a/artikel/05.tex
+++ b/artikel/05.tex
@@ -12,7 +12,7 @@
   \begin{enumerate}
   
     \item auf rechtmäßige Weise, nach Treu und Glauben und in einer für die \hyperref[itm:04-1]{betroffene Person} nachvollziehbaren Weise
-     verarbeitet werden („Rechtmäßigkeit, Verarbeitung nach Treu und Glauben, Transparenz“);
+     verarbeitet werden („Rechtmäßigkeit, \hyperref[itm:04-2]{Verarbeitung} nach Treu und Glauben, Transparenz“);
     \label{itm:05-1a}
 
     \item für festgelegte, eindeutige und legitime Zwecke erhoben werden und dürfen nicht in einer mit diesen Zwecken
@@ -22,12 +22,12 @@
      Zwecken („Zweckbindung“);
     \label{itm:05-1b}
 
-    \item dem Zweck angemessen und erheblich sowie auf das für die Zwecke der Verarbeitung notwendige Maß beschränkt
+    \item dem Zweck angemessen und erheblich sowie auf das für die Zwecke der \hyperref[itm:04-2]{Verarbeitung} notwendige Maß beschränkt
      sein („Datenminimierung“);
     \label{itm:05-1c}
 
     \item sachlich richtig und erforderlichenfalls auf dem neuesten Stand sein; es sind alle angemessenen Maßnahmen zu
-     treffen, damit \hyperref[itm:04-1]{personenbezogene Daten}, die im Hinblick auf die Zwecke ihrer Verarbeitung unrichtig sind,
+     treffen, damit \hyperref[itm:04-1]{personenbezogene Daten}, die im Hinblick auf die Zwecke ihrer \hyperref[itm:04-2]{Verarbeitung} unrichtig sind,
      unverzüglich gelöscht oder berichtigt werden („Richtigkeit“);
     \label{itm:05-1d}
 
@@ -41,7 +41,7 @@
     \label{itm:05-1e}
 
     \item in einer Weise verarbeitet werden, die eine angemessene Sicherheit der \hyperref[itm:04-1]{personenbezogenen Daten} gewährleistet,
-     einschließlich Schutz vor unbefugter oder unrechtmäßiger Verarbeitung und vor unbeabsichtigtem Verlust,
+     einschließlich Schutz vor unbefugter oder unrechtmäßiger \hyperref[itm:04-2]{Verarbeitung} und vor unbeabsichtigtem Verlust,
      unbeabsichtigter Zerstörung oder unbeabsichtigter Schädigung durch geeignete technische und organisatorische
      Maßnahmen („Integrität und Vertraulichkeit“);
     \label{itm:05-1f}
