--- a/artikel/08.tex
+++ b/artikel/08.tex
@@ -7,9 +7,9 @@
 \begin{enumerate}
 
   \item Gilt \hyperref[itm:06-1a]{Artikel 6 Absatz 1 Buchstabe a} bei einem Angebot von \hyperref[itm:04-28]{Diensten der
-   Informationsgesellschaft}, das einem Kind direkt gemacht wird, so ist die Verarbeitung der \hyperref[itm:04-1]{personenbezogenen Daten}
+   Informationsgesellschaft}, das einem Kind direkt gemacht wird, so ist die \hyperref[itm:04-2]{Verarbeitung} der \hyperref[itm:04-1]{personenbezogenen Daten}
    des Kindes rechtmäßig, wenn das Kind das sechzehnte Lebensjahr vollendet hat. Hat das Kind noch nicht das sechzehnte
-   Lebensjahr vollendet, so ist diese Verarbeitung nur rechtmäßig, sofern und soweit diese Einwilligung durch den
+   Lebensjahr vollendet, so ist diese \hyperref[itm:04-2]{Verarbeitung} nur rechtmäßig, sofern und soweit diese Einwilligung durch den
    Träger der elterlichen Verantwortung für das Kind oder mit dessen Zustimmung erteilt wird. 
   \label{itm:08-1}
 
