--- a/artikel/12.tex
+++ b/artikel/12.tex
@@ -8,7 +8,7 @@
 
   \item Der Verantwortliche trifft geeignete Maßnahmen, um der \hyperref[itm:04-1]{betroffenen Person} alle Informationen gemäß den Artikeln
    \hyperref[ch:13]{13} und \hyperref[ch:14]{14} und alle Mitteilungen gemäß den Artikeln \hyperref[ch:15]{15} bis
-   \hyperref[ch:22]{22} und \hyperref[ch:34]{Artikel 34}, die sich auf die Verarbeitung beziehen, in präziser,
+   \hyperref[ch:22]{22} und \hyperref[ch:34]{Artikel 34}, die sich auf die \hyperref[itm:04-2]{Verarbeitung} beziehen, in präziser,
     transparenter, verständlicher und leicht zugänglicher Form in einer klaren und einfachen Sprache zu übermitteln;
     dies gilt insbesondere für Informationen, die sich speziell an Kinder richten. Die Übermittlung der Informationen
     erfolgt schriftlich oder in anderer Form, gegebenenfalls auch elektronisch. Falls von der \hyperref[itm:04-1]{betroffenen Person}
@@ -67,7 +67,7 @@
   \item Die Informationen, die den \hyperref[itm:04-1]{betroffenen Personen} gemäß den Artikeln \hyperref[ch:13]{13} und \hyperref[ch:14]
    {14} bereitzustellen sind, können in Kombination mit standardisierten Bildsymbolen bereitgestellt werden, um in
    leicht wahrnehmbarer, verständlicher und klar nachvollziehbarer Form einen aussagekräftigen Überblick über die
-   beabsichtigte Verarbeitung zu vermitteln. Werden die Bildsymbole in elektronischer Form dargestellt, müssen sie
+   beabsichtigte \hyperref[itm:04-2]{Verarbeitung} zu vermitteln. Werden die Bildsymbole in elektronischer Form dargestellt, müssen sie
    maschinenlesbar sein.
   \label{itm:12-7}
 
