--- a/artikel/13.tex
+++ b/artikel/13.tex
@@ -19,10 +19,10 @@
     \label{itm:13-1b}
 
     \item die Zwecke, für die die \hyperref[itm:04-1]{personenbezogenen Daten} verarbeitet werden sollen, sowie die Rechtsgrundlage für die
-     Verarbeitung;
+     \hyperref[itm:04-2]{Verarbeitung};
     \label{itm:13-1c}
 
-    \item wenn die Verarbeitung auf \hyperref[itm:06-1f]{Artikel 6 Absatz 1 Buchstabe f} beruht, die berechtigten
+    \item wenn die \hyperref[itm:04-2]{Verarbeitung} auf \hyperref[itm:06-1f]{Artikel 6 Absatz 1 Buchstabe f} beruht, die berechtigten
      Interessen, die von dem Verantwortlichen oder einem Dritten verfolgt werden;
     \label{itm:13-1d}
 
@@ -41,7 +41,7 @@
 
   \item Zusätzlich zu den Informationen gemäß \hyperref[itm:13-1]{Absatz 1} stellt der Verantwortliche der \hyperref[itm:04-1]{betroffenen
    Person} zum Zeitpunkt der Erhebung dieser Daten folgende weitere Informationen zur Verfügung, die notwendig sind, um
-   eine faire und transparente Verarbeitung zu gewährleisten:
+   eine faire und transparente \hyperref[itm:04-2]{Verarbeitung} zu gewährleisten:
   \label{itm:13-2}
 
   \begin{enumerate}
@@ -52,12 +52,12 @@
 
     \item das Bestehen eines Rechts auf Auskunft seitens des Verantwortlichen über die betreffenden personenbezogenen
      Daten sowie auf Berichtigung oder Löschung oder auf \hyperref[itm:04-3]{Einschränkung der Verarbeitung} oder eines Widerspruchsrechts
-     gegen die Verarbeitung sowie des Rechts auf Datenübertragbarkeit;
+     gegen die \hyperref[itm:04-2]{Verarbeitung} sowie des Rechts auf Datenübertragbarkeit;
     \label{itm:13-2b}
 
-    \item wenn die Verarbeitung auf \hyperref[itm:06-1a]{Artikel 6 Absatz 1 Buchstabe a} oder \hyperref[itm:09-2a]
+    \item wenn die \hyperref[itm:04-2]{Verarbeitung} auf \hyperref[itm:06-1a]{Artikel 6 Absatz 1 Buchstabe a} oder \hyperref[itm:09-2a]
      {Artikel 9 Absatz 2 Buchstabe a} beruht, das Bestehen eines Rechts, die Einwilligung jederzeit zu widerrufen, ohne
-     dass die Rechtmäßigkeit der aufgrund der Einwilligung bis zum Widerruf erfolgten Verarbeitung berührt wird;
+     dass die Rechtmäßigkeit der aufgrund der Einwilligung bis zum Widerruf erfolgten \hyperref[itm:04-2]{Verarbeitung} berührt wird;
     \label{itm:13-2c}
 
     \item das Bestehen eines Beschwerderechts bei einer Aufsichtsbehörde;
@@ -71,7 +71,7 @@
     \item das Bestehen einer automatisierten Entscheidungsfindung einschließlich Profiling gemäß \hyperref[ch:22]
      {Artikel 22} Absätze \hyperref[itm:22-1]{1} und \hyperref[itm:22-4]{4} und -- zumindest in diesen Fällen --
      aussagekräftige Informationen über die involvierte Logik sowie die Tragweite und die angestrebten Auswirkungen
-     einer derartigen Verarbeitung für die \hyperref[itm:04-1]{betroffene Person}.
+     einer derartigen \hyperref[itm:04-2]{Verarbeitung} für die \hyperref[itm:04-1]{betroffene Person}.
     \label{itm:13-2f}
 
   \end{enumerate}
