--- a/artikel/14.tex
+++ b/artikel/14.tex
@@ -19,7 +19,7 @@
     \label{itm:14-1b}
 
     \item die Zwecke, für die die \hyperref[itm:04-1]{personenbezogenen Daten} verarbeitet werden sollen, sowie die Rechtsgrundlage für die
-     Verarbeitung;
+     \hyperref[itm:04-2]{Verarbeitung};
     \label{itm:14-1c}
 
     \item die Kategorien \hyperref[itm:04-1]{personenbezogener Daten}, die verarbeitet werden;
@@ -40,7 +40,7 @@
 
   \item Zusätzlich zu den Informationen gemäß \hyperref[itm:14-1]{Absatz 1} stellt der Verantwortliche der \hyperref[itm:04-1]{betroffenen
    Person} die folgenden Informationen zur Verfügung, die erforderlich sind, um der \hyperref[itm:04-1]{betroffenen Person} gegenüber eine
-   faire und transparente Verarbeitung zu gewährleisten:
+   faire und transparente \hyperref[itm:04-2]{Verarbeitung} zu gewährleisten:
   \label{itm:14-2}
 
   \begin{enumerate}
@@ -49,18 +49,18 @@
      Kriterien für die Festlegung dieser Dauer;
     \label{itm:14-2a}
 
-    \item wenn die Verarbeitung auf \hyperref[itm:06-1f]{Artikel 6 Absatz 1 Buchstabe f} beruht, die berechtigten
+    \item wenn die \hyperref[itm:04-2]{Verarbeitung} auf \hyperref[itm:06-1f]{Artikel 6 Absatz 1 Buchstabe f} beruht, die berechtigten
      Interessen, die von dem Verantwortlichen oder einem Dritten verfolgt werden;
     \label{itm:14-2b}
 
     \item das Bestehen eines Rechts auf Auskunft seitens des Verantwortlichen über die betreffenden personenbezogenen
      Daten sowie auf Berichtigung oder Löschung oder auf \hyperref[itm:04-3]{Einschränkung der Verarbeitung} und eines Widerspruchsrechts
-     gegen die Verarbeitung sowie des Rechts auf Datenübertragbarkeit;
+     gegen die \hyperref[itm:04-2]{Verarbeitung} sowie des Rechts auf Datenübertragbarkeit;
     \label{itm:14-2c}
 
-    \item wenn die Verarbeitung auf \hyperref[itm:06-1a]{Artikel 6 Absatz 1 Buchstabe a} oder \hyperref[itm:09-2a]
+    \item wenn die \hyperref[itm:04-2]{Verarbeitung} auf \hyperref[itm:06-1a]{Artikel 6 Absatz 1 Buchstabe a} oder \hyperref[itm:09-2a]
      {Artikel 9 Absatz 2 Buchstabe a} beruht, das Bestehen eines Rechts, die Einwilligung jederzeit zu widerrufen, ohne
-     dass die Rechtmäßigkeit der aufgrund der Einwilligung bis zum Widerruf erfolgten Verarbeitung berührt wird;
+     dass die Rechtmäßigkeit der aufgrund der Einwilligung bis zum Widerruf erfolgten \hyperref[itm:04-2]{Verarbeitung} berührt wird;
     \label{itm:14-2d}
 
     \item das Bestehen eines Beschwerderechts bei einer Aufsichtsbehörde;
@@ -73,7 +73,7 @@
     \item das Bestehen einer automatisierten Entscheidungsfindung einschließlich Profiling gemäß \hyperref[ch:22]
      {Artikel 22} Absätze \hyperref[itm:22-1]{1} und \hyperref[itm:22-4]{4} und -- zumindest in diesen Fällen --
      aussagekräftige Informationen über die involvierte Logik sowie die Tragweite und die angestrebten Auswirkungen
-     einer derartigen Verarbeitung für die \hyperref[itm:04-1]{betroffene Person}.
+     einer derartigen \hyperref[itm:04-2]{Verarbeitung} für die \hyperref[itm:04-1]{betroffene Person}.
     \label{itm:14-2g}
 
   \end{enumerate}
@@ -84,7 +84,7 @@
 
   \begin{enumerate}
   
-    \item unter Berücksichtigung der spezifischen Umstände der Verarbeitung der \hyperref[itm:04-1]{personenbezogenen Daten} innerhalb einer
+    \item unter Berücksichtigung der spezifischen Umstände der \hyperref[itm:04-2]{Verarbeitung} der \hyperref[itm:04-1]{personenbezogenen Daten} innerhalb einer
      angemessenen Frist nach Erlangung der \hyperref[itm:04-1]{personenbezogenen Daten}, längstens jedoch innerhalb eines Monats,
     \label{itm:14-3a}
 
@@ -113,11 +113,11 @@
     \label{itm:14-5a}
 
     \item die Erteilung dieser Informationen sich als unmöglich erweist oder einen unverhältnismäßigen Aufwand erfordern
-     würde; dies gilt insbesondere für die Verarbeitung für im öffentlichen Interesse liegende Archivzwecke, für
+     würde; dies gilt insbesondere für die \hyperref[itm:04-2]{Verarbeitung} für im öffentlichen Interesse liegende Archivzwecke, für
      wissenschaftliche oder historische Forschungszwecke oder für statistische Zwecke vorbehaltlich der in
      \hyperref[itm:89-1]{Artikel 89 Absatz 1} genannten Bedingungen und Garantien oder soweit die in \hyperref[itm:14-1]
       {Absatz 1 des vorliegenden Artikels} genannte Pflicht voraussichtlich die Verwirklichung der Ziele dieser
-      Verarbeitung unmöglich macht oder ernsthaft beeinträchtigt In diesen Fällen ergreift der Verantwortliche
+      \hyperref[itm:04-2]{Verarbeitung} unmöglich macht oder ernsthaft beeinträchtigt In diesen Fällen ergreift der Verantwortliche
       geeignete Maßnahmen zum Schutz der Rechte und Freiheiten sowie der berechtigten Interessen der \hyperref[itm:04-1]{betroffenen
       Person}, einschließlich der Bereitstellung dieser Informationen für die Öffentlichkeit,
     \label{itm:14-5b}
