--- a/artikel/17.tex
+++ b/artikel/17.tex
@@ -17,14 +17,14 @@
      wurden, nicht mehr notwendig.
     \label{itm:17-1a}
 
-    \item Die \hyperref[itm:04-1]{betroffene Person} widerruft ihre Einwilligung, auf die sich die Verarbeitung gemäß \hyperref[itm:06-1a]
+    \item Die \hyperref[itm:04-1]{betroffene Person} widerruft ihre Einwilligung, auf die sich die \hyperref[itm:04-2]{Verarbeitung} gemäß \hyperref[itm:06-1a]
      {Artikel 6 Absatz 1 Buchstabe a} oder \hyperref[itm:09-2a]{Artikel 9 Absatz 2 Buchstabe a} stützte, und es fehlt
-     an einer anderweitigen Rechtsgrundlage für die Verarbeitung.
+     an einer anderweitigen Rechtsgrundlage für die \hyperref[itm:04-2]{Verarbeitung}.
     \label{itm:17-1b}
 
-    \item Die \hyperref[itm:04-1]{betroffene Person} legt gemäß \hyperref[itm:21-1]{Artikel 21 Absatz 1} Widerspruch gegen die Verarbeitung
-     ein und es liegen keine vorrangigen berechtigten Gründe für die Verarbeitung vor, oder die \hyperref[itm:04-1]{betroffene Person} legt
-     gemäß \hyperref[itm:21-2]{Artikel 21 Absatz 2} Widerspruch gegen die Verarbeitung ein.
+    \item Die \hyperref[itm:04-1]{betroffene Person} legt gemäß \hyperref[itm:21-1]{Artikel 21 Absatz 1} Widerspruch gegen die \hyperref[itm:04-2]{Verarbeitung}
+     ein und es liegen keine vorrangigen berechtigten Gründe für die \hyperref[itm:04-2]{Verarbeitung} vor, oder die \hyperref[itm:04-1]{betroffene Person} legt
+     gemäß \hyperref[itm:21-2]{Artikel 21 Absatz 2} Widerspruch gegen die \hyperref[itm:04-2]{Verarbeitung} ein.
     \label{itm:17-1c}
 
     \item Die \hyperref[itm:04-1]{personenbezogenen Daten} wurden unrechtmäßig verarbeitet.
@@ -48,7 +48,7 @@
    Daten verlangt hat.
   \label{itm:17-2}
 
-  \item Die Absätze \hyperref[itm:17-1]{1} und \hyperref[itm:17-2]{2} gelten nicht, soweit die Verarbeitung erforderlich
+  \item Die Absätze \hyperref[itm:17-1]{1} und \hyperref[itm:17-2]{2} gelten nicht, soweit die \hyperref[itm:04-2]{Verarbeitung} erforderlich
    ist
   \label{itm:17-3}
 
@@ -57,7 +57,7 @@
     \item zur Ausübung des Rechts auf freie Meinungsäußerung und Information;
     \label{itm:17-3a}
 
-    \item zur Erfüllung einer rechtlichen Verpflichtung, die die Verarbeitung nach dem Recht der Union oder der
+    \item zur Erfüllung einer rechtlichen Verpflichtung, die die \hyperref[itm:04-2]{Verarbeitung} nach dem Recht der Union oder der
      Mitgliedstaaten, dem der Verantwortliche unterliegt, erfordert, oder zur Wahrnehmung einer Aufgabe, die im
      öffentlichen Interesse liegt oder in Ausübung öffentlicher Gewalt erfolgt, die dem Verantwortlichen übertragen
      wurde;
@@ -70,7 +70,7 @@
 
     \item für im öffentlichen Interesse liegende Archivzwecke, wissenschaftliche oder historische Forschungszwecke oder
      für statistische Zwecke gemäß \hyperref[itm:89-1]{Artikel 89 Absatz 1}, soweit das in \hyperref[itm:17-1]
-     {Absatz 1} genannte Recht voraussichtlich die Verwirklichung der Ziele dieser Verarbeitung unmöglich macht oder
+     {Absatz 1} genannte Recht voraussichtlich die Verwirklichung der Ziele dieser \hyperref[itm:04-2]{Verarbeitung} unmöglich macht oder
      ernsthaft beeinträchtigt, oder
     \label{itm:17-3d}
 
