--- a/artikel/18.tex
+++ b/artikel/18.tex
@@ -16,22 +16,22 @@
      Dauer, die es dem Verantwortlichen ermöglicht, die Richtigkeit der \hyperref[itm:04-1]{personenbezogenen Daten} zu überprüfen,
     \label{itm:18-1a}
 
-    \item die Verarbeitung unrechtmäßig ist und die \hyperref[itm:04-1]{betroffene Person} die Löschung der \hyperref[itm:04-1]{personenbezogenen Daten} ablehnt
+    \item die \hyperref[itm:04-2]{Verarbeitung} unrechtmäßig ist und die \hyperref[itm:04-1]{betroffene Person} die Löschung der \hyperref[itm:04-1]{personenbezogenen Daten} ablehnt
      und stattdessen die Einschränkung der Nutzung der \hyperref[itm:04-1]{personenbezogenen Daten} verlangt;
     \label{itm:18-1b}
 
-    \item der Verantwortliche die \hyperref[itm:04-1]{personenbezogenen Daten} für die Zwecke der Verarbeitung nicht länger benötigt, die
+    \item der Verantwortliche die \hyperref[itm:04-1]{personenbezogenen Daten} für die Zwecke der \hyperref[itm:04-2]{Verarbeitung} nicht länger benötigt, die
      \hyperref[itm:04-1]{betroffene Person} sie jedoch zur Geltendmachung, Ausübung oder Verteidigung von Rechtsansprüchen benötigt, oder
     \label{itm:18-1c}
 
-    \item die \hyperref[itm:04-1]{betroffene Person} Widerspruch gegen die Verarbeitung gemäß \hyperref[itm:21-1]{Artikel 21 Absatz 1}
+    \item die \hyperref[itm:04-1]{betroffene Person} Widerspruch gegen die \hyperref[itm:04-2]{Verarbeitung} gemäß \hyperref[itm:21-1]{Artikel 21 Absatz 1}
      eingelegt hat, solange noch nicht feststeht, ob die berechtigten Gründe des Verantwortlichen gegenüber denen der
      \hyperref[itm:04-1]{betroffenen Person} überwiegen.
     \label{itm:18-1d}
 
   \end{enumerate}
 
-  \item Wurde die Verarbeitung gemäß \hyperref[itm:18-1]{Absatz 1} eingeschränkt, so dürfen diese \hyperref[itm:04-1]{personenbezogenen Daten}
+  \item Wurde die \hyperref[itm:04-2]{Verarbeitung} gemäß \hyperref[itm:18-1]{Absatz 1} eingeschränkt, so dürfen diese \hyperref[itm:04-1]{personenbezogenen Daten}
    -- von ihrer Speicherung abgesehen -- nur mit Einwilligung der \hyperref[itm:04-1]{betroffenen Person} oder zur Geltendmachung, Ausübung
    oder Verteidigung von Rechtsansprüchen oder zum Schutz der Rechte einer anderen natürlichen oder juristischen
    Person oder aus Gründen eines wichtigen öffentlichen Interesses der Union oder eines Mitgliedstaats verarbeitet
