--- a/artikel/22.tex
+++ b/artikel/22.tex
@@ -6,7 +6,7 @@
 
 \begin{enumerate}
 
-  \item Die \hyperref[itm:04-1]{betroffene Person} hat das Recht, nicht einer ausschließlich auf einer automatisierten Verarbeitung --
+  \item Die \hyperref[itm:04-1]{betroffene Person} hat das Recht, nicht einer ausschließlich auf einer automatisierten \hyperref[itm:04-2]{Verarbeitung} --
    einschließlich Profiling -- beruhenden Entscheidung unterworfen zu werden, die ihr gegenüber rechtliche Wirkung
    entfaltet oder sie in ähnlicher Weise erheblich beeinträchtigt.
   \label{itm:22-1}
