--- a/artikel/23.tex
+++ b/artikel/23.tex
@@ -62,7 +62,7 @@
 
   \begin{enumerate}
   
-    \item die Zwecke der Verarbeitung oder die Verarbeitungskategorien,
+    \item die Zwecke der \hyperref[itm:04-2]{Verarbeitung} oder die Verarbeitungskategorien,
     \label{itm:23-2a}
 
     \item die Kategorien \hyperref[itm:04-1]{personenbezogener Daten},
@@ -78,7 +78,7 @@
     \label{itm:23-2e}
 
     \item die jeweiligen Speicherfristen sowie die geltenden Garantien unter Berücksichtigung von Art, Umfang und
-     Zwecken der Verarbeitung oder der Verarbeitungskategorien,
+     Zwecken der \hyperref[itm:04-2]{Verarbeitung} oder der Verarbeitungskategorien,
     \label{itm:23-2f}
 
     \item die Risiken für die Rechte und Freiheiten der \hyperref[itm:04-1]{betroffenen Personen} und
