--- a/artikel/24.tex
+++ b/artikel/24.tex
@@ -7,9 +7,9 @@
 \begin{enumerate}
 
   \item Der Verantwortliche setzt unter Berücksichtigung der Art, des Umfangs, der Umstände und der Zwecke der
-   Verarbeitung sowie der unterschiedlichen Eintrittswahrscheinlichkeit und Schwere der Risiken für die Rechte und
+   \hyperref[itm:04-2]{Verarbeitung} sowie der unterschiedlichen Eintrittswahrscheinlichkeit und Schwere der Risiken für die Rechte und
    Freiheiten natürlicher Personen geeignete technische und organisatorische Maßnahmen um, um sicherzustellen und den
-   Nachweis dafür erbringen zu können, dass die Verarbeitung gemäß dieser Verordnung erfolgt. Diese Maßnahmen werden
+   Nachweis dafür erbringen zu können, dass die \hyperref[itm:04-2]{Verarbeitung} gemäß dieser Verordnung erfolgt. Diese Maßnahmen werden
    erforderlichenfalls überprüft und aktualisiert.
   \label{itm:24-1}
 
