--- a/artikel/26.tex
+++ b/artikel/26.tex
@@ -6,7 +6,7 @@
 
 \begin{enumerate}
 
-  \item Legen zwei oder mehr Verantwortliche gemeinsam die Zwecke der und die Mittel zur Verarbeitung fest, so sind sie
+  \item Legen zwei oder mehr Verantwortliche gemeinsam die Zwecke der und die Mittel zur \hyperref[itm:04-2]{Verarbeitung} fest, so sind sie
    gemeinsam Verantwortliche. Sie legen in einer Vereinbarung in transparenter Form fest, wer von ihnen welche
    Verpflichtung gemäß dieser Verordnung erfüllt, insbesondere was die Wahrnehmung der Rechte der \hyperref[itm:04-1]{betroffenen Person}
    angeht, und wer welchen Informationspflichten gemäß den Artikeln \hyperref[ch:13]{13} und \hyperref[ch:14]
