--- a/artikel/27.tex
+++ b/artikel/27.tex
@@ -15,10 +15,10 @@
 
   \begin{enumerate}
   
-    \item eine Verarbeitung, die gelegentlich erfolgt, nicht die umfangreiche Verarbeitung besonderer Datenkategorien im
-     Sinne des \hyperref[itm:09-1]{Artikels 9 Absatz 1} oder die umfangreiche Verarbeitung von \hyperref[itm:04-1]{personenbezogenen Daten}
+    \item eine \hyperref[itm:04-2]{Verarbeitung}, die gelegentlich erfolgt, nicht die umfangreiche \hyperref[itm:04-2]{Verarbeitung} besonderer Datenkategorien im
+     Sinne des \hyperref[itm:09-1]{Artikels 9 Absatz 1} oder die umfangreiche \hyperref[itm:04-2]{Verarbeitung} von \hyperref[itm:04-1]{personenbezogenen Daten}
      über strafrechtliche Verurteilungen und Straftaten im Sinne des \hyperref[ch:10]{Artikels 10} einschließt und
-     unter Berücksichtigung der Art, der Umstände, des Umfangs und der Zwecke der Verarbeitung voraussichtlich nicht zu
+     unter Berücksichtigung der Art, der Umstände, des Umfangs und der Zwecke der \hyperref[itm:04-2]{Verarbeitung} voraussichtlich nicht zu
      einem Risiko für die Rechte und Freiheiten natürlicher Personen führt, oder
     \label{itm:27-2a}
 
@@ -34,7 +34,7 @@
 
   \item Der Vertreter wird durch den Verantwortlichen oder den Auftragsverarbeiter beauftragt, zusätzlich zu diesem oder
    an seiner Stelle insbesondere für Aufsichtsbehörden und \hyperref[itm:04-1]{betroffene Personen} bei sämtlichen Fragen im Zusammenhang
-   mit der Verarbeitung zur Gewährleistung der Einhaltung dieser Verordnung als Anlaufstelle zu dienen.
+   mit der \hyperref[itm:04-2]{Verarbeitung} zur Gewährleistung der Einhaltung dieser Verordnung als Anlaufstelle zu dienen.
   \label{itm:27-4}
 
   \item Die Benennung eines Vertreters durch den Verantwortlichen oder den Auftragsverarbeiter erfolgt unbeschadet
