--- a/artikel/28.tex
+++ b/artikel/28.tex
@@ -6,9 +6,9 @@
 
 \begin{enumerate}
 
-  \item Erfolgt eine Verarbeitung im Auftrag eines Verantwortlichen, so arbeitet dieser nur mit Auftragsverarbeitern,
+  \item Erfolgt eine \hyperref[itm:04-2]{Verarbeitung} im Auftrag eines Verantwortlichen, so arbeitet dieser nur mit Auftragsverarbeitern,
    die hinreichend Garantien dafür bieten, dass geeignete technische und organisatorische Maßnahmen so durchgeführt
-   werden, dass die Verarbeitung im Einklang mit den Anforderungen dieser Verordnung erfolgt und den Schutz der Rechte
+   werden, dass die \hyperref[itm:04-2]{Verarbeitung} im Einklang mit den Anforderungen dieser Verordnung erfolgt und den Schutz der Rechte
    der \hyperref[itm:04-1]{betroffenen Person} gewährleistet.
   \label{itm:28-1}
 
@@ -19,10 +19,10 @@
    gegen derartige Änderungen Einspruch zu erheben.
   \label{itm:28-2}
 
-  \item Die Verarbeitung durch einen Auftragsverarbeiter erfolgt auf der Grundlage eines Vertrags oder eines anderen
+  \item Die \hyperref[itm:04-2]{Verarbeitung} durch einen Auftragsverarbeiter erfolgt auf der Grundlage eines Vertrags oder eines anderen
    Rechtsinstruments nach dem Unionsrecht oder dem Recht der Mitgliedstaaten, der bzw. das den Auftragsverarbeiter in
-   Bezug auf den Verantwortlichen bindet und in dem Gegenstand und Dauer der Verarbeitung, Art und Zweck der
-   Verarbeitung, die Art der \hyperref[itm:04-1]{personenbezogenen Daten}, die Kategorien \hyperref[itm:04-1]{betroffener Personen} und die Pflichten und Rechte
+   Bezug auf den Verantwortlichen bindet und in dem Gegenstand und Dauer der \hyperref[itm:04-2]{Verarbeitung}, Art und Zweck der
+   \hyperref[itm:04-2]{Verarbeitung}, die Art der \hyperref[itm:04-1]{personenbezogenen Daten}, die Kategorien \hyperref[itm:04-1]{betroffener Personen} und die Pflichten und Rechte
    des Verantwortlichen festgelegt sind. Dieser Vertrag bzw. dieses andere Rechtsinstrument sieht insbesondere vor,
    dass der Auftragsverarbeiter
   \label{itm:28-3-1}
@@ -33,11 +33,11 @@
      Übermittlung \hyperref[itm:04-1]{personenbezogener Daten} an ein Drittland oder eine \hyperref[itm:04-29]{internationale Organisation} -- verarbeitet, sofern
      er nicht durch das Recht der Union oder der Mitgliedstaaten, dem der Auftragsverarbeiter unterliegt, hierzu
      verpflichtet ist; in einem solchen Fall teilt der Auftragsverarbeiter dem Verantwortlichen diese rechtlichen
-     Anforderungen vor der Verarbeitung mit, sofern das betreffende Recht eine solche Mitteilung nicht wegen eines
+     Anforderungen vor der \hyperref[itm:04-2]{Verarbeitung} mit, sofern das betreffende Recht eine solche Mitteilung nicht wegen eines
      wichtigen öffentlichen Interesses verbietet;
     \label{itm:28-3-1a}
 
-    \item gewährleistet, dass sich die zur Verarbeitung der \hyperref[itm:04-1]{personenbezogenen Daten} befugten Personen zur
+    \item gewährleistet, dass sich die zur \hyperref[itm:04-2]{Verarbeitung} der \hyperref[itm:04-1]{personenbezogenen Daten} befugten Personen zur
      Vertraulichkeit verpflichtet haben oder einer angemessenen gesetzlichen Verschwiegenheitspflicht unterliegen;
     \label{itm:28-3-1b}
 
@@ -48,12 +48,12 @@
      Inanspruchnahme der Dienste eines weiteren Auftragsverarbeiters einhält;
     \label{itm:28-3-1d}
 
-    \item angesichts der Art der Verarbeitung den Verantwortlichen nach Möglichkeit mit geeigneten technischen und
+    \item angesichts der Art der \hyperref[itm:04-2]{Verarbeitung} den Verantwortlichen nach Möglichkeit mit geeigneten technischen und
      organisatorischen Maßnahmen dabei unterstützt, seiner Pflicht zur Beantwortung von Anträgen auf Wahrnehmung der in
      \hyperref[part:3]{Kapitel III} genannten Rechte der \hyperref[itm:04-1]{betroffenen Person} nachzukommen;
     \label{itm:28-3-1e}
 
-    \item unter Berücksichtigung der Art der Verarbeitung und der ihm zur Verfügung stehenden Informationen den
+    \item unter Berücksichtigung der Art der \hyperref[itm:04-2]{Verarbeitung} und der ihm zur Verfügung stehenden Informationen den
      Verantwortlichen bei der Einhaltung der in den Artikeln \hyperref[ch:32]{32} bis \hyperref[ch:36]{36} genannten
      Pflichten unterstützt;
     \label{itm:28-3-1f}
@@ -84,7 +84,7 @@
    Mitgliedstaats dieselben Datenschutzpflichten auferlegt, die in dem Vertrag oder anderen Rechtsinstrument zwischen
    dem Verantwortlichen und dem Auftragsverarbeiter gemäß \hyperref[itm:28-3-1]{Absatz 3} festgelegt sind, wobei
    insbesondere hinreichende Garantien dafür geboten werden muss, dass die geeigneten technischen und organisatorischen
-   Maßnahmen so durchgeführt werden, dass die Verarbeitung entsprechend den Anforderungen dieser Verordnung erfolgt.
+   Maßnahmen so durchgeführt werden, dass die \hyperref[itm:04-2]{Verarbeitung} entsprechend den Anforderungen dieser Verordnung erfolgt.
    Kommt der weitere Auftragsverarbeiter seinen Datenschutzpflichten nicht nach, so haftet der erste
    Auftragsverarbeiter gegenüber dem Verantwortlichen für die Einhaltung der Pflichten jenes anderen
    Auftragsverarbeiters.
@@ -120,8 +120,8 @@
   \label{itm:28-9}
 
   \item Unbeschadet der Artikel \hyperref[ch:82]{82}, \hyperref[ch:83]{83} und \hyperref[ch:84]{84} gilt ein
-   Auftragsverarbeiter, der unter Verstoß gegen diese Verordnung die Zwecke und Mittel der Verarbeitung bestimmt, in
-   Bezug auf diese Verarbeitung als Verantwortlicher.
+   Auftragsverarbeiter, der unter Verstoß gegen diese Verordnung die Zwecke und Mittel der \hyperref[itm:04-2]{Verarbeitung} bestimmt, in
+   Bezug auf diese \hyperref[itm:04-2]{Verarbeitung} als Verantwortlicher.
   \label{itm:28-10}
 
 \end{enumerate}
