--- a/artikel/29.tex
+++ b/artikel/29.tex
@@ -6,7 +6,7 @@
 
 Der Auftragsverarbeiter und jede dem Verantwortlichen oder dem Auftragsverarbeiter unterstellte Person, die Zugang zu
 \hyperref[itm:04-1]{personenbezogenen Daten} hat, dürfen diese Daten ausschließlich auf Weisung des Verantwortlichen verarbeiten, es sei
-denn, dass sie nach dem Unionsrecht oder dem Recht der Mitgliedstaaten zur Verarbeitung verpflichtet sind.
+denn, dass sie nach dem Unionsrecht oder dem Recht der Mitgliedstaaten zur \hyperref[itm:04-2]{Verarbeitung} verpflichtet sind.
 
 \addsec{Eigene Notizen}
 
