--- a/artikel/30.tex
+++ b/artikel/30.tex
@@ -16,7 +16,7 @@
      des Vertreters des Verantwortlichen sowie eines etwaigen Datenschutzbeauftragten;
     \label{itm:30-1a}
 
-    \item die Zwecke der Verarbeitung;
+    \item die Zwecke der \hyperref[itm:04-2]{Verarbeitung};
     \label{itm:30-1b}
 
     \item eine Beschreibung der Kategorien \hyperref[itm:04-1]{betroffener Personen} und der Kategorien \hyperref[itm:04-1]{personenbezogener Daten};
@@ -42,7 +42,7 @@
   \end{enumerate}
 
   \item Jeder Auftragsverarbeiter und gegebenenfalls sein Vertreter führen ein Verzeichnis zu allen Kategorien von im
-   Auftrag eines Verantwortlichen durchgeführten Tätigkeiten der Verarbeitung, die Folgendes enthält:
+   Auftrag eines Verantwortlichen durchgeführten Tätigkeiten der \hyperref[itm:04-2]{Verarbeitung}, die Folgendes enthält:
   \label{itm:30-2}
 
   \begin{enumerate}
@@ -52,7 +52,7 @@
      Verantwortlichen oder des Auftragsverarbeiters und eines etwaigen Datenschutzbeauftragten;
     \label{itm:30-2a}
 
-    \item die Kategorien von Verarbeitungen, die im Auftrag jedes Verantwortlichen durchgeführt werden;
+    \item die Kategorien von \hyperref[itm:04-2]{Verarbeitungen}, die im Auftrag jedes Verantwortlichen durchgeführt werden;
     \label{itm:30-2b}
 
     \item gegebenenfalls Übermittlungen von \hyperref[itm:04-1]{personenbezogenen Daten} an ein Drittland oder an eine \hyperref[itm:04-29]{internationale
@@ -77,9 +77,9 @@
 
   \item Die in den Absätzen \hyperref[itm:30-1]{1} und \hyperref[itm:30-2]{2} genannten Pflichten gelten nicht für
    Unternehmen oder Einrichtungen, die weniger als 250 Mitarbeiter beschäftigen, sofern die von ihnen vorgenommene
-   Verarbeitung nicht ein Risiko für die Rechte und Freiheiten der \hyperref[itm:04-1]{betroffenen Personen} birgt, die Verarbeitung nicht
-   nur gelegentlich erfolgt oder nicht die Verarbeitung besonderer Datenkategorien gemäß \hyperref[itm:09-1]{Artikel 9
-   Absatz 1} bzw. die  Verarbeitung von \hyperref[itm:04-1]{personenbezogenen Daten} über strafrechtliche Verurteilungen und Straftaten im
+   \hyperref[itm:04-2]{Verarbeitung} nicht ein Risiko für die Rechte und Freiheiten der \hyperref[itm:04-1]{betroffenen Personen} birgt, die \hyperref[itm:04-2]{Verarbeitung} nicht
+   nur gelegentlich erfolgt oder nicht die \hyperref[itm:04-2]{Verarbeitung} besonderer Datenkategorien gemäß \hyperref[itm:09-1]{Artikel 9
+   Absatz 1} bzw. die  \hyperref[itm:04-2]{Verarbeitung} von \hyperref[itm:04-1]{personenbezogenen Daten} über strafrechtliche Verurteilungen und Straftaten im
    Sinne des \hyperref[ch:10]{Artikels 10} einschließt.
   \label{itm:30-5}
 
