--- a/artikel/35.tex
+++ b/artikel/35.tex
@@ -6,8 +6,8 @@
 
 \begin{enumerate}
 
-  \item Hat eine Form der Verarbeitung, insbesondere bei Verwendung neuer Technologien, aufgrund der Art, des Umfangs,
-   der Umstände und der Zwecke der Verarbeitung voraussichtlich ein hohes Risiko für die Rechte und Freiheiten
+  \item Hat eine Form der \hyperref[itm:04-2]{Verarbeitung}, insbesondere bei Verwendung neuer Technologien, aufgrund der Art, des Umfangs,
+   der Umstände und der Zwecke der \hyperref[itm:04-2]{Verarbeitung} voraussichtlich ein hohes Risiko für die Rechte und Freiheiten
    natürlicher Personen zur Folge, so führt der Verantwortliche vorab eine Abschätzung der Folgen der vorgesehenen
    Verarbeitungsvorgänge für den Schutz \hyperref[itm:04-1]{personenbezogener Daten} durch. Für die Untersuchung mehrerer ähnlicher
    Verarbeitungsvorgänge mit ähnlich hohen Risiken kann eine einzige Abschätzung vorgenommen werden.
@@ -24,11 +24,11 @@
   \begin{enumerate}
   
     \item systematische und umfassende Bewertung persönlicher Aspekte natürlicher Personen, die sich auf automatisierte
-     Verarbeitung einschließlich Profiling gründet und die ihrerseits als Grundlage für Entscheidungen dient, die
+     \hyperref[itm:04-2]{Verarbeitung} einschließlich Profiling gründet und die ihrerseits als Grundlage für Entscheidungen dient, die
      Rechtswirkung gegenüber natürlichen Personen entfalten oder diese in ähnlich erheblicher Weise beeinträchtigen;
     \label{itm:35-3a}
 
-    \item umfangreiche Verarbeitung besonderer Kategorien von \hyperref[itm:04-1]{personenbezogenen Daten} gemäß \hyperref[itm:09-1]
+    \item umfangreiche \hyperref[itm:04-2]{Verarbeitung} besonderer Kategorien von \hyperref[itm:04-1]{personenbezogenen Daten} gemäß \hyperref[itm:09-1]
      {Artikel 9 Absatz 1} oder von \hyperref[itm:04-1]{personenbezogenen Daten} über strafrechtliche Verurteilungen und Straftaten
      gemäß \hyperref[ch:10]{Artikel 10} oder
     \label{itm:35-3b}
@@ -60,7 +60,7 @@
 
   \begin{enumerate}
   
-    \item eine systematische Beschreibung der geplanten Verarbeitungsvorgänge und der Zwecke der Verarbeitung,
+    \item eine systematische Beschreibung der geplanten Verarbeitungsvorgänge und der Zwecke der \hyperref[itm:04-2]{Verarbeitung},
      gegebenenfalls einschließlich der von dem Verantwortlichen verfolgten berechtigten Interessen;
     \label{itm:35-7a}
 
@@ -86,11 +86,11 @@
   \label{itm:35-8}
 
   \item Der Verantwortliche holt gegebenenfalls den Standpunkt der \hyperref[itm:04-1]{betroffenen Personen} oder ihrer Vertreter zu der
-   beabsichtigten Verarbeitung unbeschadet des Schutzes gewerblicher oder öffentlicher Interessen oder der Sicherheit
+   beabsichtigten \hyperref[itm:04-2]{Verarbeitung} unbeschadet des Schutzes gewerblicher oder öffentlicher Interessen oder der Sicherheit
    der Verarbeitungsvorgänge ein.
   \label{itm:35-9}
 
-  \item Falls die Verarbeitung gemäß \hyperref[itm:06-1]{Artikel 6 Absatz 1} Buchstabe \hyperref[itm:06-1c]
+  \item Falls die \hyperref[itm:04-2]{Verarbeitung} gemäß \hyperref[itm:06-1]{Artikel 6 Absatz 1} Buchstabe \hyperref[itm:06-1c]
    {c} oder \hyperref[itm:06-1e]{e} auf einer Rechtsgrundlage im Unionsrecht oder im Recht des Mitgliedstaats, dem der
    Verantwortliche unterliegt, beruht und falls diese Rechtsvorschriften den konkreten Verarbeitungsvorgang oder die
    konkreten Verarbeitungsvorgänge regeln und bereits im Rahmen der allgemeinen Folgenabschätzung im Zusammenhang mit
@@ -99,7 +99,7 @@
    den betreffenden Verarbeitungstätigkeiten eine solche Folgenabschätzung durchzuführen.
   \label{itm:35-10}
 
-  \item Erforderlichenfalls führt der Verantwortliche eine Überprüfung durch, um zu bewerten, ob die Verarbeitung gemäß
+  \item Erforderlichenfalls führt der Verantwortliche eine Überprüfung durch, um zu bewerten, ob die \hyperref[itm:04-2]{Verarbeitung} gemäß
    der Datenschutz-Folgenabschätzung durchgeführt wird; dies gilt zumindest, wenn hinsichtlich des mit den
    Verarbeitungsvorgängen verbundenen Risikos Änderungen eingetreten sind.
   \label{itm:35-11}
