--- a/artikel/36.tex
+++ b/artikel/36.tex
@@ -6,17 +6,17 @@
 
 \begin{enumerate}
 
-  \item Der Verantwortliche konsultiert vor der Verarbeitung die Aufsichtsbehörde, wenn aus einer
-   Datenschutz-Folgenabschätzung gemäß \hyperref[ch:35]{Artikel 35} hervorgeht, dass die Verarbeitung ein hohes Risiko
+  \item Der Verantwortliche konsultiert vor der \hyperref[itm:04-2]{Verarbeitung} die Aufsichtsbehörde, wenn aus einer
+   Datenschutz-Folgenabschätzung gemäß \hyperref[ch:35]{Artikel 35} hervorgeht, dass die \hyperref[itm:04-2]{Verarbeitung} ein hohes Risiko
    zur Folge hätte, sofern der Verantwortliche keine Maßnahmen zur Eindämmung des Risikos trifft.
   \label{itm:36-1}
 
-  \item Falls die Aufsichtsbehörde der Auffassung ist, dass die geplante Verarbeitung gemäß \hyperref[itm:36-1]
+  \item Falls die Aufsichtsbehörde der Auffassung ist, dass die geplante \hyperref[itm:04-2]{Verarbeitung} gemäß \hyperref[itm:36-1]
    {Absatz 1} nicht im Einklang mit dieser Verordnung stünde, insbesondere weil der Verantwortliche das Risiko nicht
    ausreichend ermittelt oder nicht ausreichend eingedämmt hat, unterbreitet sie dem Verantwortlichen und
    gegebenenfalls dem Auftragsverarbeiter innerhalb eines Zeitraums von bis zu acht Wochen nach Erhalt des Ersuchens um
    Konsultation entsprechende schriftliche Empfehlungen und kann ihre in \hyperref[ch:58]{Artikel 58} genannten
-   Befugnisse ausüben. Diese Frist kann unter Berücksichtigung der Komplexität der geplanten Verarbeitung um sechs
+   Befugnisse ausüben. Diese Frist kann unter Berücksichtigung der Komplexität der geplanten \hyperref[itm:04-2]{Verarbeitung} um sechs
    Wochen verlängert werden. Die Aufsichtsbehörde unterrichtet den Verantwortlichen oder gegebenenfalls den
    Auftragsverarbeiter über eine solche Fristverlängerung innerhalb eines Monats nach Eingang des Antrags auf
    Konsultation zusammen mit den Gründen für die Verzögerung. Diese Fristen können ausgesetzt werden, bis die
@@ -30,11 +30,11 @@
   \begin{enumerate}
   
     \item gegebenenfalls Angaben zu den jeweiligen Zuständigkeiten des Verantwortlichen, der gemeinsam Verantwortlichen
-     und der an der Verarbeitung beteiligten Auftragsverarbeiter, insbesondere bei einer Verarbeitung innerhalb einer
+     und der an der \hyperref[itm:04-2]{Verarbeitung} beteiligten Auftragsverarbeiter, insbesondere bei einer \hyperref[itm:04-2]{Verarbeitung} innerhalb einer
      Gruppe von Unternehmen;
     \label{itm:36-3a}
 
-    \item die Zwecke und die Mittel der beabsichtigten Verarbeitung;
+    \item die Zwecke und die Mittel der beabsichtigten \hyperref[itm:04-2]{Verarbeitung};
     \label{itm:36-3b}
 
     \item die zum Schutz der Rechte und Freiheiten der \hyperref[itm:04-1]{betroffenen Personen} gemäß dieser Verordnung vorgesehenen
@@ -54,12 +54,12 @@
 
   \item Die Mitgliedstaaten konsultieren die Aufsichtsbehörde bei der Ausarbeitung eines Vorschlags für von einem
    nationalen Parlament zu erlassende Gesetzgebungsmaßnahmen oder von auf solchen Gesetzgebungsmaßnahmen basierenden
-   Regelungsmaßnahmen, die die Verarbeitung betreffen.
+   Regelungsmaßnahmen, die die \hyperref[itm:04-2]{Verarbeitung} betreffen.
   \label{itm:36-4}
 
   \item Ungeachtet des \hyperref[itm:36-1]{Absatzes 1} können Verantwortliche durch das Recht der Mitgliedstaaten
-   verpflichtet werden, bei der Verarbeitung zur Erfüllung einer im öffentlichen Interesse liegenden Aufgabe,
-   einschließlich der Verarbeitung zu Zwecken der sozialen Sicherheit und der öffentlichen Gesundheit, die
+   verpflichtet werden, bei der \hyperref[itm:04-2]{Verarbeitung} zur Erfüllung einer im öffentlichen Interesse liegenden Aufgabe,
+   einschließlich der \hyperref[itm:04-2]{Verarbeitung} zu Zwecken der sozialen Sicherheit und der öffentlichen Gesundheit, die
    Aufsichtsbehörde zu konsultieren und deren vorherige Genehmigung einzuholen.
   \label{itm:36-5}
    
