--- a/artikel/39.tex
+++ b/artikel/39.tex
@@ -12,7 +12,7 @@
   \begin{enumerate}
   
     \item Unterrichtung und Beratung des Verantwortlichen oder des Auftragsverarbeiters und der Beschäftigten, die
-     Verarbeitungen durchführen, hinsichtlich ihrer Pflichten nach dieser Verordnung sowie nach sonstigen
+     \hyperref[itm:04-2]{Verarbeitungen} durchführen, hinsichtlich ihrer Pflichten nach dieser Verordnung sowie nach sonstigen
      Datenschutzvorschriften der Union bzw. der Mitgliedstaaten;
     \label{itm:39-1a}
 
@@ -29,7 +29,7 @@
     \item Zusammenarbeit mit der Aufsichtsbehörde;
     \label{itm:39-1d}
 
-    \item Tätigkeit als Anlaufstelle für die Aufsichtsbehörde in mit der Verarbeitung zusammenhängenden Fragen,
+    \item Tätigkeit als Anlaufstelle für die Aufsichtsbehörde in mit der \hyperref[itm:04-2]{Verarbeitung} zusammenhängenden Fragen,
      einschließlich der vorherigen Konsultation gemäß \hyperref[ch:36]{Artikel 36}, und gegebenenfalls Beratung zu
      allen sonstigen Fragen.
     \label{itm:39-1e}
@@ -37,7 +37,7 @@
   \end{enumerate}
 
   \item Der Datenschutzbeauftragte trägt bei der Erfüllung seiner Aufgaben dem mit den Verarbeitungsvorgängen
-   verbundenen Risiko gebührend Rechnung, wobei er die Art, den Umfang, die Umstände und die Zwecke der Verarbeitung
+   verbundenen Risiko gebührend Rechnung, wobei er die Art, den Umfang, die Umstände und die Zwecke der \hyperref[itm:04-2]{Verarbeitung}
    berücksichtigt.
   \label{itm:39-e}
 
