--- a/artikel/40.tex
+++ b/artikel/40.tex
@@ -19,7 +19,7 @@
 
   \begin{enumerate}
   
-    \item faire und transparente Verarbeitung;
+    \item faire und transparente \hyperref[itm:04-2]{Verarbeitung};
     \label{itm:40-2a}
 
     \item die berechtigten Interessen des Verantwortlichen in bestimmten Zusammenhängen;
@@ -42,7 +42,7 @@
     \label{itm:40-2g}
 
     \item die Maßnahmen und Verfahren gemäß den Artikeln \hyperref[ch:24]{24} und \hyperref[ch:25]{25} und die Maßnahmen
-     für die Sicherheit der Verarbeitung gemäß \hyperref[ch:32]{Artikel 32};
+     für die Sicherheit der \hyperref[itm:04-2]{Verarbeitung} gemäß \hyperref[ch:32]{Artikel 32};
     \label{itm:40-2h}
 
     \item die Meldung von \hyperref[itm:04-12]{Verletzungen des Schutzes personenbezogener Daten} an Aufsichtsbehörden und die
@@ -53,7 +53,7 @@
     \label{itm:40-2j}
 
     \item außergerichtliche Verfahren und sonstige Streitbeilegungsverfahren zur Beilegung von Streitigkeiten zwischen
-     Verantwortlichen und \hyperref[itm:04-1]{betroffenen Personen} im Zusammenhang mit der Verarbeitung, unbeschadet der Rechte \hyperref[itm:04-1]{betroffener
+     Verantwortlichen und \hyperref[itm:04-1]{betroffenen Personen} im Zusammenhang mit der \hyperref[itm:04-2]{Verarbeitung}, unbeschadet der Rechte \hyperref[itm:04-1]{betroffener
      Personen} gemäß den Artikeln \hyperref[ch:77]{77} und \hyperref[ch:79]{79}.
     \label{itm:40-2k}
 
