--- a/artikel/41.tex
+++ b/artikel/41.tex
@@ -56,7 +56,7 @@
    ergreift, die nicht mit dieser Verordnung vereinbar sind.
   \label{itm:41-5}
 
-  \item Dieser Artikel gilt nicht für die Verarbeitung durch Behörden oder öffentliche Stellen.
+  \item Dieser Artikel gilt nicht für die \hyperref[itm:04-2]{Verarbeitung} durch Behörden oder öffentliche Stellen.
   \label{itm:41-6}
 
 \end{enumerate}
