--- a/artikel/42.tex
+++ b/artikel/42.tex
@@ -39,7 +39,7 @@
    Europäischen Datenschutzsiegel, führen.
   \label{itm:42-5}
 
-  \item Der Verantwortliche oder der Auftragsverarbeiter, der die von ihm durchgeführte Verarbeitung dem
+  \item Der Verantwortliche oder der Auftragsverarbeiter, der die von ihm durchgeführte \hyperref[itm:04-2]{Verarbeitung} dem
    Zertifizierungsverfahren unterwirft, stellt der Zertifizierungsstelle nach \hyperref[ch:43]{Artikel 43} oder
    gegebenenfalls der zuständigen Aufsichtsbehörde alle für die Durchführung des Zertifizierungsverfahrens
    erforderlichen Informationen zur Verfügung und gewährt ihr den in diesem Zusammenhang erforderlichen Zugang zu
