--- a/artikel/47.tex
+++ b/artikel/47.tex
@@ -17,7 +17,7 @@
      werden, und dies auch für ihre Beschäftigten gilt,
     \label{itm:47-1a}
 
-    \item den \hyperref[itm:04-1]{betroffenen Personen} ausdrücklich durchsetzbare Rechte in Bezug auf die Verarbeitung ihrer
+    \item den \hyperref[itm:04-1]{betroffenen Personen} ausdrücklich durchsetzbare Rechte in Bezug auf die \hyperref[itm:04-2]{Verarbeitung} ihrer
      \hyperref[itm:04-1]{personenbezogenen Daten} übertragen und
     \label{itm:47-1b}
 
@@ -46,14 +46,14 @@
 
     \item die Anwendung der allgemeinen Datenschutzgrundsätze, insbesondere Zweckbindung, Datenminimierung, begrenzte
      Speicherfristen, Datenqualität, Datenschutz durch Technikgestaltung und durch datenschutzfreundliche
-     Voreinstellungen, Rechtsgrundlage für die Verarbeitung, Verarbeitung besonderer Kategorien von personenbezogenen
+     Voreinstellungen, Rechtsgrundlage für die \hyperref[itm:04-2]{Verarbeitung}, \hyperref[itm:04-2]{Verarbeitung} besonderer Kategorien von personenbezogenen
      Daten, Maßnahmen zur Sicherstellung der Datensicherheit und Anforderungen für die Weiterübermittlung an nicht an
      diese internen Datenschutzvorschriften gebundene Stellen;
     \label{itm:47-2d}
 
-    \item die Rechte der \hyperref[itm:04-1]{betroffenen Personen} in Bezug auf die Verarbeitung und die diesen offenstehenden Mittel zur
+    \item die Rechte der \hyperref[itm:04-1]{betroffenen Personen} in Bezug auf die \hyperref[itm:04-2]{Verarbeitung} und die diesen offenstehenden Mittel zur
      Wahrnehmung dieser Rechte einschließlich des Rechts, nicht einer ausschließlich auf einer automatisierten
-     Verarbeitung -- einschließlich Profiling -- beruhenden Entscheidung nach \hyperref[ch:22]{Artikel 22} unterworfen
+     \hyperref[itm:04-2]{Verarbeitung} -- einschließlich Profiling -- beruhenden Entscheidung nach \hyperref[ch:22]{Artikel 22} unterworfen
      zu werden sowie des in \hyperref[ch:79]{Artikel 79} niedergelegten Rechts auf Beschwerde bei der zuständigen
      Aufsichtsbehörde beziehungsweise auf Einlegung eines Rechtsbehelfs bei den zuständigen Gerichten der
      Mitgliedstaaten und im Falle einer Verletzung der \hyperref[itm:04-20]{verbindlichen internen Datenschutzvorschriften} Wiedergutmachung
