--- a/artikel/55.tex
+++ b/artikel/55.tex
@@ -10,13 +10,13 @@
    Verordnung übertragen wurden, im Hoheitsgebiet ihres eigenen Mitgliedstaats zuständig.
   \label{itm:55-1}
 
-  \item Erfolgt die Verarbeitung durch Behörden oder private Stellen auf der Grundlage von \hyperref[itm:06-1]{Artikel 6
+  \item Erfolgt die \hyperref[itm:04-2]{Verarbeitung} durch Behörden oder private Stellen auf der Grundlage von \hyperref[itm:06-1]{Artikel 6
    Absatz 1} Buchstabe \hyperref[itm:06-1c]{c} oder \hyperref[itm:06-1e]{e}, so ist die Aufsichtsbehörde des
    betroffenen Mitgliedstaats zuständig. In diesem Fall findet \hyperref[ch:56]{Artikel 56} keine Anwendung.
   \label{itm:55-2}
 
   \item Die Aufsichtsbehörden sind nicht zuständig für die Aufsicht über die von Gerichten im Rahmen ihrer justiziellen
-   Tätigkeit vorgenommenen Verarbeitungen.
+   Tätigkeit vorgenommenen \hyperref[itm:04-2]{Verarbeitungen}.
   \label{itm:55-3}
 
 \end{enumerate}
