--- a/artikel/57.tex
+++ b/artikel/57.tex
@@ -14,13 +14,13 @@
     \item die Anwendung dieser Verordnung überwachen und durchsetzen;
     \label{itm:57-1a}
 
-    \item die Öffentlichkeit für die Risiken, Vorschriften, Garantien und Rechte im Zusammenhang mit der Verarbeitung
+    \item die Öffentlichkeit für die Risiken, Vorschriften, Garantien und Rechte im Zusammenhang mit der \hyperref[itm:04-2]{Verarbeitung}
      sensibilisieren und sie darüber aufklären. Besondere Beachtung finden dabei spezifische Maßnahmen für Kinder;
     \label{itm:57-1b}
 
     \item im Einklang mit dem Recht des Mitgliedsstaats das nationale Parlament, die Regierung und andere Einrichtungen
      und Gremien über legislative und administrative Maßnahmen zum Schutz der Rechte und Freiheiten natürlicher
-     Personen in Bezug auf die Verarbeitung beraten;
+     Personen in Bezug auf die \hyperref[itm:04-2]{Verarbeitung} beraten;
     \label{itm:57-1c}
 
     \item die Verantwortlichen und die Auftragsverarbeiter für die ihnen aus dieser Verordnung entstehenden Pflichten
