--- a/artikel/58.tex
+++ b/artikel/58.tex
@@ -62,7 +62,7 @@
      Person} entsprechend zu benachrichtigen,
     \label{itm:58-2e}
 
-    \item eine vorübergehende oder endgültige Beschränkung der Verarbeitung, einschließlich eines Verbots, zu
+    \item eine vorübergehende oder endgültige Beschränkung der \hyperref[itm:04-2]{Verarbeitung}, einschließlich eines Verbots, zu
      verhängen,
     \label{itm:58-2f}
 
@@ -103,7 +103,7 @@
      des Mitgliedstaats an sonstige Einrichtungen und Stellen sowie an die Öffentlichkeit zu richten,
     \label{itm:58-3b}
 
-    \item die Verarbeitung gemäß \hyperref[itm:36-5]{Artikel 36 Absatz 5} zu genehmigen, falls im Recht des
+    \item die \hyperref[itm:04-2]{Verarbeitung} gemäß \hyperref[itm:36-5]{Artikel 36 Absatz 5} zu genehmigen, falls im Recht des
      Mitgliedstaats eine derartige vorherige Genehmigung verlangt wird,
     \label{itm:58-3c}
 
