--- a/artikel/79.tex
+++ b/artikel/79.tex
@@ -9,7 +9,7 @@
   \item Jede \hyperref[itm:04-1]{betroffene Person} hat unbeschadet eines verfügbaren verwaltungsrechtlichen oder außergerichtlichen
    Rechtsbehelfs einschließlich des Rechts auf Beschwerde bei einer Aufsichtsbehörde gemäß \hyperref[ch:77]{Artikel 77}
    das Recht auf einen wirksamen gerichtlichen Rechtsbehelf, wenn sie der Ansicht ist, dass die ihr aufgrund dieser
-   Verordnung zustehenden Rechte infolge einer nicht im Einklang mit dieser Verordnung stehenden Verarbeitung ihrer
+   Verordnung zustehenden Rechte infolge einer nicht im Einklang mit dieser Verordnung stehenden \hyperref[itm:04-2]{Verarbeitung} ihrer
    \hyperref[itm:04-1]{personenbezogenen Daten} verletzt wurden.
   \label{itm:79-1}
 
