--- a/artikel/80.tex
+++ b/artikel/80.tex
@@ -20,7 +20,7 @@
    diesem Mitgliedstaat das Recht hat, bei der gemäß \hyperref[ch:77]{Artikel 77} zuständigen Aufsichtsbehörde eine
    Beschwerde einzulegen und die in den Artikeln \hyperref[ch:78]{78} und \hyperref[ch:79]{79} aufgeführten Rechte in
    Anspruch zu nehmen, wenn ihres Erachtens die Rechte einer \hyperref[itm:04-1]{betroffenen Person} gemäß dieser Verordnung infolge einer
-   Verarbeitung verletzt worden sind.
+   \hyperref[itm:04-2]{Verarbeitung} verletzt worden sind.
   \label{itm:80-2}
 
 \end{enumerate}
