--- a/artikel/83.tex
+++ b/artikel/83.tex
@@ -20,7 +20,7 @@
   \begin{enumerate}
   
     \item Art, Schwere und Dauer des Verstoßes unter Berücksichtigung der Art, des Umfangs oder des Zwecks der
-     betreffenden Verarbeitung sowie der Zahl der von der Verarbeitung \hyperref[itm:04-1]{betroffenen Personen} und des Ausmaßes des von
+     betreffenden \hyperref[itm:04-2]{Verarbeitung} sowie der Zahl der von der \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]{betroffenen Personen} und des Ausmaßes des von
      ihnen erlittenen Schadens;
     \label{itm:83-2a}
 
@@ -96,7 +96,7 @@
 
   \begin{enumerate}
   
-    \item die Grundsätze für die Verarbeitung, einschließlich der Bedingungen für die Einwilligung, gemäß den Artikeln
+    \item die Grundsätze für die \hyperref[itm:04-2]{Verarbeitung}, einschließlich der Bedingungen für die Einwilligung, gemäß den Artikeln
      \hyperref[ch:5]{5}, \hyperref[ch:6]{6}, \hyperref[ch:7]{7} und \hyperref[ch:9]{9};
     \label{itm:83-5a}
 
