--- a/artikel/85.tex
+++ b/artikel/85.tex
@@ -7,11 +7,11 @@
 \begin{enumerate}
 
   \item Die Mitgliedstaaten bringen durch Rechtsvorschriften das Recht auf den Schutz \hyperref[itm:04-1]{personenbezogener Daten} gemäß
-   dieser Verordnung mit dem Recht auf freie Meinungsäußerung und Informationsfreiheit, einschließlich der Verarbeitung
+   dieser Verordnung mit dem Recht auf freie Meinungsäußerung und Informationsfreiheit, einschließlich der \hyperref[itm:04-2]{Verarbeitung}
    zu journalistischen Zwecken und zu wissenschaftlichen, künstlerischen oder literarischen Zwecken, in Einklang.
   \label{itm:85-1}
 
-  \item Für die Verarbeitung, die zu journalistischen Zwecken oder zu wissenschaftlichen, künstlerischen oder
+  \item Für die \hyperref[itm:04-2]{Verarbeitung}, die zu journalistischen Zwecken oder zu wissenschaftlichen, künstlerischen oder
    literarischen Zwecken erfolgt, sehen die Mitgliedstaaten Abweichungen oder Ausnahmen von \hyperref[part:2]
    {Kapitel II} (Grundsätze), \hyperref[part:3]{Kapitel III} (Rechte der \hyperref[itm:04-1]{betroffenen Person}), \hyperref[part:4]
    {Kapitel IV}(Verantwortlicher und Auftragsverarbeiter), \hyperref[part:5]{Kapitel V} (Übermittlung personenbezogener
