--- a/artikel/91.tex
+++ b/artikel/91.tex
@@ -7,7 +7,7 @@
 \begin{enumerate}
 
   \item Wendet eine Kirche oder eine religiöse Vereinigung oder Gemeinschaft in einem Mitgliedstaat zum Zeitpunkt des
-   Inkrafttretens dieser Verordnung umfassende Regeln zum Schutz natürlicher Personen bei der Verarbeitung an, so
+   Inkrafttretens dieser Verordnung umfassende Regeln zum Schutz natürlicher Personen bei der \hyperref[itm:04-2]{Verarbeitung} an, so
    dürfen diese Regeln weiter angewandt werden, sofern sie mit dieser Verordnung in Einklang gebracht werden.
   \label{itm:91-1}
 
