--- a/artikel/01.tex
+++ b/artikel/01.tex
@@ -6,7 +6,7 @@
 
 \begin{enumerate}
 
-  \item Diese Verordnung enthält Vorschriften zum Schutz natürlicher Personen bei der Verarbeitung \hyperref[itm:04-1]
+  \item Diese Verordnung enthält Vorschriften zum Schutz natürlicher Personen bei der \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]
    {personenbezogener Daten} und zum freien Verkehr solcher Daten.
   \label{itm:01-1}
 
@@ -15,7 +15,7 @@
   \label{itm:01-2}
 
   \item Der freie Verkehr \hyperref[itm:04-1]{personenbezogener Daten} in der Union darf aus Gründen des Schutzes
-   natürlicher Personen bei der Verarbeitung \hyperref[itm:04-1]{personenbezogener Daten} weder eingeschränkt noch
+   natürlicher Personen bei der \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]{personenbezogener Daten} weder eingeschränkt noch
    verboten werden.
   \label{itm:01-3}
 
