--- a/artikel/02.tex
+++ b/artikel/02.tex
@@ -6,12 +6,12 @@
 
 \begin{enumerate}
 
-  \item Diese Verordnung gilt für die ganz oder teilweise automatisierte Verarbeitung \hyperref[itm:04-1]
-   {personenbezogener Daten} sowie für die nichtautomatisierte Verarbeitung \hyperref[itm:04-1]
+  \item Diese Verordnung gilt für die ganz oder teilweise automatisierte \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]
+   {personenbezogener Daten} sowie für die nichtautomatisierte \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]
    {personenbezogener Daten}, die in einem Dateisystem gespeichert sind oder gespeichert werden sollen.
   \label{itm:02-1}
 
-  \item Diese Verordnung findet keine Anwendung auf die Verarbeitung \hyperref[itm:04-1]{personenbezogener Daten}
+  \item Diese Verordnung findet keine Anwendung auf die \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]{personenbezogener Daten}
   \label{itm:02-2}
 
   \begin{enumerate}
@@ -33,9 +33,9 @@
 
   \end{enumerate}
 
-  \item Für die Verarbeitung \hyperref[itm:04-1]{personenbezogener Daten} durch die Organe, Einrichtungen, Ämter und
+  \item Für die \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]{personenbezogener Daten} durch die Organe, Einrichtungen, Ämter und
    Agenturen der Union gilt die Verordnung (EG) Nr. 45/2001. Die Verordnung (EG) Nr. 45/2001 und sonstige Rechtsakte
-   der Union, die diese Verarbeitung \hyperref[itm:04-1]{personenbezogener Daten} regeln, werden im Einklang
+   der Union, die diese \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]{personenbezogener Daten} regeln, werden im Einklang
    mit \hyperref[ch:98]{Artikel 98} an die Grundsätze und Vorschriften der vorliegenden Verordnung angepasst.
   \label{itm:02-3}
 
