--- a/artikel/04.tex
+++ b/artikel/04.tex
@@ -24,17 +24,17 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
   \label{itm:04-2}
 
   \item „Einschränkung der Verarbeitung“ die Markierung gespeicherter \hyperref[itm:04-1]{personenbezogener Daten} mit dem Ziel, ihre
-   künftige Verarbeitung einzuschränken;
+   künftige \hyperref[itm:04-2]{Verarbeitung} einzuschränken;
   \label{itm:04-3}
 
-  \item „Profiling“ jede Art der automatisierten Verarbeitung \hyperref[itm:04-1]{personenbezogener Daten}, die darin besteht, dass diese
+  \item „Profiling“ jede Art der automatisierten \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]{personenbezogener Daten}, die darin besteht, dass diese
    \hyperref[itm:04-1]{personenbezogenen Daten} verwendet werden, um bestimmte persönliche Aspekte, die sich auf eine natürliche Person
    beziehen, zu bewerten, insbesondere um Aspekte bezüglich Arbeitsleistung, wirtschaftliche Lage, Gesundheit,
    persönliche Vorlieben, Interessen, Zuverlässigkeit, Verhalten, Aufenthaltsort oder Ortswechsel dieser natürlichen
    Person zu analysieren oder vorherzusagen;
   \label{itm:04-4}
 
-  \item „Pseudonymisierung“ die Verarbeitung \hyperref[itm:04-1]{personenbezogener Daten} in einer Weise, dass die \hyperref[itm:04-1]{personenbezogenen Daten}
+  \item „Pseudonymisierung“ die \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]{personenbezogener Daten} in einer Weise, dass die \hyperref[itm:04-1]{personenbezogenen Daten}
    ohne Hinzuziehung zusätzlicher Informationen nicht mehr einer spezifischen \hyperref[itm:04-1]{betroffenen Person} zugeordnet werden
    können, sofern diese zusätzlichen Informationen gesondert aufbewahrt werden und technischen und organisatorischen
    Maßnahmen unterliegen, die gewährleisten, dass die \hyperref[itm:04-1]{personenbezogenen Daten} nicht einer identifizierten oder
@@ -47,8 +47,8 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
   \label{itm:04-6}
 
   \item „Verantwortlicher“ die natürliche oder juristische Person, Behörde, Einrichtung oder andere Stelle, die allein
-   oder gemeinsam mit anderen über die Zwecke und Mittel der Verarbeitung von \hyperref[itm:04-1]{personenbezogenen Daten} entscheidet; sind
-   die Zwecke und Mittel dieser Verarbeitung durch das Unionsrecht oder das Recht der Mitgliedstaaten vorgegeben, so
+   oder gemeinsam mit anderen über die Zwecke und Mittel der \hyperref[itm:04-2]{Verarbeitung} von \hyperref[itm:04-1]{personenbezogenen Daten} entscheidet; sind
+   die Zwecke und Mittel dieser \hyperref[itm:04-2]{Verarbeitung} durch das Unionsrecht oder das Recht der Mitgliedstaaten vorgegeben, so
    kann der Verantwortliche beziehungsweise können die bestimmten Kriterien seiner Benennung nach dem Unionsrecht oder
    dem Recht der Mitgliedstaaten vorgesehen werden;
   \label{itm:04-7}
@@ -60,9 +60,9 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
   \item „Empfänger“ eine natürliche oder juristische Person, Behörde, Einrichtung oder andere Stelle, der
    \hyperref[itm:04-1]{personenbezogene Daten} offengelegt werden, unabhängig davon, ob es sich bei ihr um einen Dritten handelt oder nicht.
    Behörden, die im Rahmen eines bestimmten Untersuchungsauftrags nach dem Unionsrecht oder dem Recht der
-   Mitgliedstaaten möglicherweise \hyperref[itm:04-1]{personenbezogene Daten} erhalten, gelten jedoch nicht als Empfänger; die Verarbeitung
+   Mitgliedstaaten möglicherweise \hyperref[itm:04-1]{personenbezogene Daten} erhalten, gelten jedoch nicht als Empfänger; die \hyperref[itm:04-2]{Verarbeitung}
    dieser Daten durch die genannten Behörden erfolgt im Einklang mit den geltenden Datenschutzvorschriften gemäß den
-   Zwecken der Verarbeitung;
+   Zwecken der \hyperref[itm:04-2]{Verarbeitung};
   \label{itm:04-9}
 
   \item „Dritter“ eine natürliche oder juristische Person, Behörde, Einrichtung oder andere Stelle, außer der
@@ -73,7 +73,7 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
 
   \item „Einwilligung“ der \hyperref[itm:04-1]{betroffenen Person} jede freiwillig für den bestimmten Fall, in informierter Weise und
    unmissverständlich abgegebene Willensbekundung in Form einer Erklärung oder einer sonstigen eindeutigen
-   bestätigenden Handlung, mit der die \hyperref[itm:04-1]{betroffene Person} zu verstehen gibt, dass sie mit der Verarbeitung der sie
+   bestätigenden Handlung, mit der die \hyperref[itm:04-1]{betroffene Person} zu verstehen gibt, dass sie mit der \hyperref[itm:04-2]{Verarbeitung} der sie
    betreffenden \hyperref[itm:04-1]{personenbezogenen Daten} einverstanden ist;
   \label{itm:04-11}
 
@@ -105,7 +105,7 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
   \begin{enumerate}
   
     \item im Falle eines Verantwortlichen mit Niederlassungen in mehr als einem Mitgliedstaat den Ort seiner
-     Hauptverwaltung in der Union, es sei denn, die Entscheidungen hinsichtlich der Zwecke und Mittel der Verarbeitung
+     Hauptverwaltung in der Union, es sei denn, die Entscheidungen hinsichtlich der Zwecke und Mittel der \hyperref[itm:04-2]{Verarbeitung}
      \hyperref[itm:04-1]{personenbezogener Daten} werden in einer anderen Niederlassung des Verantwortlichen in der Union getroffen und
      diese Niederlassung ist befugt, diese Entscheidungen umsetzen zu lassen; in diesem Fall gilt die Niederlassung,
      die derartige Entscheidungen trifft, als Hauptniederlassung;
@@ -145,7 +145,7 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
    staatliche Stelle;
   \label{itm:04-21}   
 
-  \item „betroffene Aufsichtsbehörde“ eine Aufsichtsbehörde, die von der Verarbeitung \hyperref[itm:04-1]{personenbezogener Daten} betroffen
+  \item „betroffene Aufsichtsbehörde“ eine Aufsichtsbehörde, die von der \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]{personenbezogener Daten} betroffen
    ist, weil
   \label{itm:04-22}
 
@@ -155,7 +155,7 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
      niedergelassen ist,
     \label{itm:04-22a}
 
-    \item diese Verarbeitung erhebliche Auswirkungen auf \hyperref[itm:04-1]{betroffene Personen} mit Wohnsitz im Mitgliedstaat dieser
+    \item diese \hyperref[itm:04-2]{Verarbeitung} erhebliche Auswirkungen auf \hyperref[itm:04-1]{betroffene Personen} mit Wohnsitz im Mitgliedstaat dieser
      Aufsichtsbehörde hat oder haben kann oder
     \label{itm:04-22b}
 
@@ -169,12 +169,12 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
 
   \begin{enumerate}
 
-    \item eine Verarbeitung \hyperref[itm:04-1]{personenbezogener Daten}, die im Rahmen der Tätigkeiten von Niederlassungen eines
+    \item eine \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]{personenbezogener Daten}, die im Rahmen der Tätigkeiten von Niederlassungen eines
      Verantwortlichen oder eines Auftragsverarbeiters in der Union in mehr als einem Mitgliedstaat erfolgt, wenn der
      Verantwortliche oder Auftragsverarbeiter in mehr als einem Mitgliedstaat niedergelassen ist, oder
     \label{itm:04-23a}
 
-    \item eine Verarbeitung \hyperref[itm:04-1]{personenbezogener Daten}, die im Rahmen der Tätigkeiten einer einzelnen Niederlassung eines
+    \item eine \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]{personenbezogener Daten}, die im Rahmen der Tätigkeiten einer einzelnen Niederlassung eines
      Verantwortlichen oder eines Auftragsverarbeiters in der Union erfolgt, die jedoch erhebliche Auswirkungen auf
      \hyperref[itm:04-1]{betroffene Personen} in mehr als einem Mitgliedstaat hat oder haben kann;
     \label{itm:04-23b}
