--- a/artikel/06.tex
+++ b/artikel/06.tex
@@ -6,32 +6,32 @@
 
 \begin{enumerate}
 
-  \item Die Verarbeitung ist nur rechtmäßig, wenn mindestens eine der nachstehenden Bedingungen erfüllt ist:
+  \item Die \hyperref[itm:04-2]{Verarbeitung} ist nur rechtmäßig, wenn mindestens eine der nachstehenden Bedingungen erfüllt ist:
   \label{itm:06-1}
 
   \begin{enumerate}
   
-    \item Die \hyperref[itm:04-1]{betroffene Person} hat ihre Einwilligung zu der Verarbeitung der sie betreffenden \hyperref[itm:04-1]{personenbezogenen Daten}
+    \item Die \hyperref[itm:04-1]{betroffene Person} hat ihre Einwilligung zu der \hyperref[itm:04-2]{Verarbeitung} der sie betreffenden \hyperref[itm:04-1]{personenbezogenen Daten}
      für einen oder mehrere bestimmte Zwecke gegeben;
     \label{itm:06-1a}
 
-    \item die Verarbeitung ist für die Erfüllung eines Vertrags, dessen Vertragspartei die \hyperref[itm:04-1]{betroffene Person} ist, oder
+    \item die \hyperref[itm:04-2]{Verarbeitung} ist für die Erfüllung eines Vertrags, dessen Vertragspartei die \hyperref[itm:04-1]{betroffene Person} ist, oder
      zur Durchführung vorvertraglicher Maßnahmen erforderlich, die auf Anfrage der \hyperref[itm:04-1]{betroffenen Person} erfolgen;
     \label{itm:06-1b}
 
-    \item die Verarbeitung ist zur Erfüllung einer rechtlichen Verpflichtung erforderlich, der der Verantwortliche
+    \item die \hyperref[itm:04-2]{Verarbeitung} ist zur Erfüllung einer rechtlichen Verpflichtung erforderlich, der der Verantwortliche
      unterliegt;
     \label{itm:06-1c}
 
-    \item die Verarbeitung ist erforderlich, um lebenswichtige Interessen der \hyperref[itm:04-1]{betroffenen Person} oder einer anderen
+    \item die \hyperref[itm:04-2]{Verarbeitung} ist erforderlich, um lebenswichtige Interessen der \hyperref[itm:04-1]{betroffenen Person} oder einer anderen
      natürlichen Person zu schützen;
     \label{itm:06-1d}
 
-    \item die Verarbeitung ist für die Wahrnehmung einer Aufgabe erforderlich, die im öffentlichen Interesse liegt oder
+    \item die \hyperref[itm:04-2]{Verarbeitung} ist für die Wahrnehmung einer Aufgabe erforderlich, die im öffentlichen Interesse liegt oder
      in Ausübung öffentlicher Gewalt erfolgt, die dem Verantwortlichen übertragen wurde;
     \label{itm:06-1e}
 
-    \item die Verarbeitung ist zur Wahrung der berechtigten Interessen des Verantwortlichen oder eines Dritten
+    \item die \hyperref[itm:04-2]{Verarbeitung} ist zur Wahrung der berechtigten Interessen des Verantwortlichen oder eines Dritten
      erforderlich, sofern nicht die Interessen oder Grundrechte und Grundfreiheiten der \hyperref[itm:04-1]{betroffenen Person}, die den
      Schutz \hyperref[itm:04-1]{personenbezogener Daten} erfordern, überwiegen, insbesondere dann, wenn es sich bei der \hyperref[itm:04-1]{betroffenen Person}
      um ein Kind handelt.
@@ -39,16 +39,16 @@
 
   \end{enumerate}
 
-  Unterabsatz 1 Buchstabe f gilt nicht für die von Behörden in Erfüllung ihrer Aufgaben vorgenommene Verarbeitung.
+  Unterabsatz 1 Buchstabe f gilt nicht für die von Behörden in Erfüllung ihrer Aufgaben vorgenommene \hyperref[itm:04-2]{Verarbeitung}.
 
   \item Die Mitgliedstaaten können spezifischere Bestimmungen zur Anpassung der Anwendung der Vorschriften dieser
-   Verordnung in Bezug auf die Verarbeitung zur Erfüllung von \hyperref[itm:06-1c]{Absatz 1 Buchstaben c} und \hyperref
-   [itm:06-1e]{e} beibehalten oder einführen, indem sie spezifische Anforderungen für die Verarbeitung sowie sonstige
-   Maßnahmen präziser bestimmen, um eine rechtmäßig und nach Treu und Glauben erfolgende Verarbeitung zu gewährleisten,
+   Verordnung in Bezug auf die \hyperref[itm:04-2]{Verarbeitung} zur Erfüllung von \hyperref[itm:06-1c]{Absatz 1 Buchstaben c} und \hyperref
+   [itm:06-1e]{e} beibehalten oder einführen, indem sie spezifische Anforderungen für die \hyperref[itm:04-2]{Verarbeitung} sowie sonstige
+   Maßnahmen präziser bestimmen, um eine rechtmäßig und nach Treu und Glauben erfolgende \hyperref[itm:04-2]{Verarbeitung} zu gewährleisten,
    einschließlich für andere besondere Verarbeitungssituationen gemäß \hyperref[part:9]{Kapitel IX}.
   \label{itm:06-2}
 
-  \item Die Rechtsgrundlage für die Verarbeitungen gemäß \hyperref[itm:06-1c]{Absatz 1 Buchstaben c} und \hyperref
+  \item Die Rechtsgrundlage für die \hyperref[itm:04-2]{Verarbeitungen} gemäß \hyperref[itm:06-1c]{Absatz 1 Buchstaben c} und \hyperref
    [itm:06-1e]{e} wird festgelegt durch
   \label{itm:06-3}
 
@@ -62,12 +62,12 @@
 
   \end{enumerate}
 
-  Der Zweck der Verarbeitung muss in dieser Rechtsgrundlage festgelegt oder hinsichtlich der Verarbeitung gemäß
+  Der Zweck der \hyperref[itm:04-2]{Verarbeitung} muss in dieser Rechtsgrundlage festgelegt oder hinsichtlich der \hyperref[itm:04-2]{Verarbeitung} gemäß
   \hyperref[itm:06-1e]{Absatz 1 Buchstaben e} für die Erfüllung einer Aufgabe erforderlich sein, die im öffentlichen
    Interesse liegt oder in Ausübung öffentlicher Gewalt erfolgt, die dem Verantwortlichen übertragen wurde. Diese
    Rechtsgrundlage kann spezifische Bestimmungen zur Anpassung der Anwendung der Vorschriften dieser Verordnung
    enthalten, unter anderem Bestimmungen darüber, welche allgemeinen Bedingungen für die Regelung der Rechtmäßigkeit
-   der Verarbeitung durch den Verantwortlichen gelten, welche Arten von Daten verarbeitet werden, welche Personen
+   der \hyperref[itm:04-2]{Verarbeitung} durch den Verantwortlichen gelten, welche Arten von Daten verarbeitet werden, welche Personen
    betroffen sind, an welche Einrichtungen und für welche Zwecke die \hyperref[itm:04-1]{personenbezogenen Daten} offengelegt werden dürfen,
    welcher Zweckbindung sie unterliegen, wie lange sie gespeichert werden dürfen und welche Verarbeitungsvorgänge
    und -verfahren angewandt werden dürfen, einschließlich Maßnahmen zur Gewährleistung einer rechtmäßig und nach Treu
@@ -75,11 +75,11 @@
    [part:9]{Kapitel IX}. Das Unionsrecht oder das Recht der Mitgliedstaaten müssen ein im öffentlichen Interesse
    liegendes Ziel verfolgen und in einem angemessenen Verhältnis zu dem verfolgten legitimen Zweck stehen.
 
-  \item Beruht die Verarbeitung zu einem anderen Zweck als zu demjenigen, zu dem die \hyperref[itm:04-1]{personenbezogenen Daten} erhoben
+  \item Beruht die \hyperref[itm:04-2]{Verarbeitung} zu einem anderen Zweck als zu demjenigen, zu dem die \hyperref[itm:04-1]{personenbezogenen Daten} erhoben
    wurden, nicht auf der Einwilligung der \hyperref[itm:04-1]{betroffenen Person} oder auf einer Rechtsvorschrift der Union oder der
    Mitgliedstaaten, die in einer demokratischen Gesellschaft eine notwendige und verhältnismäßige Maßnahme zum Schutz
    der in \hyperref[itm:23-1]{Artikel 23 Absatz 1} genannten Ziele darstellt, so berücksichtigt der Verantwortliche --
-   um festzustellen, ob die Verarbeitung zu einem anderen Zweck mit demjenigen, zu dem die \hyperref[itm:04-1]{personenbezogenen Daten}
+   um festzustellen, ob die \hyperref[itm:04-2]{Verarbeitung} zu einem anderen Zweck mit demjenigen, zu dem die \hyperref[itm:04-1]{personenbezogenen Daten}
    ursprünglich erhoben wurden, vereinbar ist -- unter anderem
   \label{itm:06-4}
 
