--- a/artikel/07.tex
+++ b/artikel/07.tex
@@ -6,8 +6,8 @@
 
 \begin{enumerate}
 
-  \item Beruht die Verarbeitung auf einer Einwilligung, muss der Verantwortliche nachweisen können, dass die \hyperref[itm:04-1]{betroffene
-   Person} in die Verarbeitung ihrer \hyperref[itm:04-1]{personenbezogenen Daten} eingewilligt hat.
+  \item Beruht die \hyperref[itm:04-2]{Verarbeitung} auf einer Einwilligung, muss der Verantwortliche nachweisen können, dass die \hyperref[itm:04-1]{betroffene
+   Person} in die \hyperref[itm:04-2]{Verarbeitung} ihrer \hyperref[itm:04-1]{personenbezogenen Daten} eingewilligt hat.
   \label{itm:07-1}
 
   \item Erfolgt die Einwilligung der \hyperref[itm:04-1]{betroffenen Person} durch eine schriftliche Erklärung, die noch andere Sachverhalte
@@ -17,14 +17,14 @@
   \label{itm:07-2}
 
   \item Die \hyperref[itm:04-1]{betroffene Person} hat das Recht, ihre Einwilligung jederzeit zu widerrufen. Durch den Widerruf der
-   Einwilligung wird die Rechtmäßigkeit der aufgrund der Einwilligung bis zum Widerruf erfolgten Verarbeitung nicht
+   Einwilligung wird die Rechtmäßigkeit der aufgrund der Einwilligung bis zum Widerruf erfolgten \hyperref[itm:04-2]{Verarbeitung} nicht
    berührt. Die \hyperref[itm:04-1]{betroffene Person} wird vor Abgabe der Einwilligung hiervon in Kenntnis gesetzt. Der Widerruf der
    Einwilligung muss so einfach wie die Erteilung der Einwilligung sein.
   \label{itm:07-3}
 
   \item Bei der Beurteilung, ob die Einwilligung freiwillig erteilt wurde, muss dem Umstand in größtmöglichem Umfang
    Rechnung getragen werden, ob unter anderem die Erfüllung eines Vertrags, einschließlich der Erbringung einer
-   Dienstleistung, von der Einwilligung zu einer Verarbeitung von \hyperref[itm:04-1]{personenbezogenen Daten} abhängig ist, die für die
+   Dienstleistung, von der Einwilligung zu einer \hyperref[itm:04-2]{Verarbeitung} von \hyperref[itm:04-1]{personenbezogenen Daten} abhängig ist, die für die
    Erfüllung des Vertrags nicht erforderlich sind.
   \label{itm:07-4}
 
