--- a/artikel/09.tex
+++ b/artikel/09.tex
@@ -6,9 +6,9 @@
 
 \begin{enumerate}
 
-  \item Die Verarbeitung \hyperref[itm:04-1]{personenbezogener Daten}, aus denen die rassische und ethnische Herkunft, politische Meinungen,
+  \item Die \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]{personenbezogener Daten}, aus denen die rassische und ethnische Herkunft, politische Meinungen,
    religiöse oder weltanschauliche Überzeugungen oder die Gewerkschaftszugehörigkeit hervorgehen, sowie die
-   Verarbeitung von \hyperref[itm:04-13]{genetischen Daten}, \hyperref[itm:04-14]{biometrischen Daten} zur eindeutigen Identifizierung einer natürlichen Person,
+   \hyperref[itm:04-2]{Verarbeitung} von \hyperref[itm:04-13]{genetischen Daten}, \hyperref[itm:04-14]{biometrischen Daten} zur eindeutigen Identifizierung einer natürlichen Person,
    Gesundheitsdaten oder Daten zum Sexualleben oder der sexuellen Orientierung einer natürlichen Person ist untersagt.
   \label{itm:09-1}
 
@@ -17,47 +17,47 @@
 
   \begin{enumerate}
   
-    \item Die \hyperref[itm:04-1]{betroffene Person} hat in die Verarbeitung der genannten \hyperref[itm:04-1]{personenbezogenen Daten} für einen oder mehrere
+    \item Die \hyperref[itm:04-1]{betroffene Person} hat in die \hyperref[itm:04-2]{Verarbeitung} der genannten \hyperref[itm:04-1]{personenbezogenen Daten} für einen oder mehrere
      festgelegte Zwecke ausdrücklich eingewilligt, es sei denn, nach Unionsrecht oder dem Recht der Mitgliedstaaten
      kann das Verbot nach \hyperref[itm:09-1]{Absatz 1} durch die Einwilligung der \hyperref[itm:04-1]{betroffenen Person} nicht aufgehoben
      werden,
     \label{itm:09-2a}
 
-    \item die Verarbeitung ist erforderlich, damit der Verantwortliche oder die \hyperref[itm:04-1]{betroffene Person} die ihm bzw. ihr aus
+    \item die \hyperref[itm:04-2]{Verarbeitung} ist erforderlich, damit der Verantwortliche oder die \hyperref[itm:04-1]{betroffene Person} die ihm bzw. ihr aus
      dem Arbeitsrecht und dem Recht der sozialen Sicherheit und des Sozialschutzes erwachsenden Rechte ausüben und
      seinen bzw. ihren diesbezüglichen Pflichten nachkommen kann, soweit dies nach Unionsrecht oder dem Recht der
      Mitgliedstaaten oder einer Kollektivvereinbarung nach dem Recht der Mitgliedstaaten, das geeignete Garantien für
      die Grundrechte und die Interessen der \hyperref[itm:04-1]{betroffenen Person} vorsieht, zulässig ist,
     \label{itm:09-2b}
 
-    \item die Verarbeitung ist zum Schutz lebenswichtiger Interessen der \hyperref[itm:04-1]{betroffenen Person} oder einer anderen
+    \item die \hyperref[itm:04-2]{Verarbeitung} ist zum Schutz lebenswichtiger Interessen der \hyperref[itm:04-1]{betroffenen Person} oder einer anderen
      natürlichen Person erforderlich und die \hyperref[itm:04-1]{betroffene Person} ist aus körperlichen oder rechtlichen Gründen
      außerstande, ihre Einwilligung zu geben,
     \label{itm:09-2c}
 
-    \item die Verarbeitung erfolgt auf der Grundlage geeigneter Garantien durch eine politisch, weltanschaulich,
+    \item die \hyperref[itm:04-2]{Verarbeitung} erfolgt auf der Grundlage geeigneter Garantien durch eine politisch, weltanschaulich,
      religiös oder gewerkschaftlich ausgerichtete Stiftung, Vereinigung oder sonstige Organisation ohne
      Gewinnerzielungsabsicht im Rahmen ihrer rechtmäßigen Tätigkeiten und unter der Voraussetzung, dass sich die
-     Verarbeitung ausschließlich auf die Mitglieder oder ehemalige Mitglieder der Organisation oder auf Personen, die
+     \hyperref[itm:04-2]{Verarbeitung} ausschließlich auf die Mitglieder oder ehemalige Mitglieder der Organisation oder auf Personen, die
      im Zusammenhang mit deren Tätigkeitszweck regelmäßige Kontakte mit ihr unterhalten, bezieht und die
      \hyperref[itm:04-1]{personenbezogenen Daten} nicht ohne Einwilligung der \hyperref[itm:04-1]{betroffenen Personen} nach außen offengelegt werden,
     \label{itm:09-2d}
 
-    \item die Verarbeitung bezieht sich auf \hyperref[itm:04-1]{personenbezogene Daten}, die die \hyperref[itm:04-1]{betroffene Person} offensichtlich öffentlich
+    \item die \hyperref[itm:04-2]{Verarbeitung} bezieht sich auf \hyperref[itm:04-1]{personenbezogene Daten}, die die \hyperref[itm:04-1]{betroffene Person} offensichtlich öffentlich
      gemacht hat,
     \label{itm:09-2e}
 
-    \item die Verarbeitung ist zur Geltendmachung, Ausübung oder Verteidigung von Rechtsansprüchen oder bei Handlungen
+    \item die \hyperref[itm:04-2]{Verarbeitung} ist zur Geltendmachung, Ausübung oder Verteidigung von Rechtsansprüchen oder bei Handlungen
      der Gerichte im Rahmen ihrer justiziellen Tätigkeit erforderlich,
     \label{itm:09-2f}
 
-    \item die Verarbeitung ist auf der Grundlage des Unionsrechts oder des Rechts eines Mitgliedstaats, das in
+    \item die \hyperref[itm:04-2]{Verarbeitung} ist auf der Grundlage des Unionsrechts oder des Rechts eines Mitgliedstaats, das in
      angemessenem Verhältnis zu dem verfolgten Ziel steht, den Wesensgehalt des Rechts auf Datenschutz wahrt und
      angemessene und spezifische Maßnahmen zur Wahrung der Grundrechte und Interessen der \hyperref[itm:04-1]{betroffenen Person} vorsieht,
      aus Gründen eines erheblichen öffentlichen Interesses erforderlich,
     \label{itm:09-2g}
 
-    \item die Verarbeitung ist für Zwecke der Gesundheitsvorsorge oder der Arbeitsmedizin, für die Beurteilung der
+    \item die \hyperref[itm:04-2]{Verarbeitung} ist für Zwecke der Gesundheitsvorsorge oder der Arbeitsmedizin, für die Beurteilung der
      Arbeitsfähigkeit des Beschäftigten, für die medizinische Diagnostik, die Versorgung oder Behandlung im
      Gesundheits- oder Sozialbereich oder für die Verwaltung von Systemen und Diensten im Gesundheits- oder
      Sozialbereich auf der Grundlage des Unionsrechts oder des Rechts eines Mitgliedstaats oder aufgrund eines Vertrags
@@ -65,14 +65,14 @@
      Bedingungen und Garantien erforderlich,
     \label{itm:09-2h}
 
-    \item die Verarbeitung ist aus Gründen des öffentlichen Interesses im Bereich der öffentlichen Gesundheit, wie dem
+    \item die \hyperref[itm:04-2]{Verarbeitung} ist aus Gründen des öffentlichen Interesses im Bereich der öffentlichen Gesundheit, wie dem
      Schutz vor schwerwiegenden grenzüberschreitenden Gesundheitsgefahren oder zur Gewährleistung hoher Qualitäts- und
      Sicherheitsstandards bei der Gesundheitsversorgung und bei Arzneimitteln und Medizinprodukten, auf der Grundlage
      des Unionsrechts oder des Rechts eines Mitgliedstaats, das angemessene und spezifische Maßnahmen zur Wahrung der
      Rechte und Freiheiten der \hyperref[itm:04-1]{betroffenen Person}, insbesondere des Berufsgeheimnisses, vorsieht, erforderlich, oder
     \label{itm:09-2i}
 
-    \item die Verarbeitung ist auf der Grundlage des Unionsrechts oder des Rechts eines Mitgliedstaats, das in
+    \item die \hyperref[itm:04-2]{Verarbeitung} ist auf der Grundlage des Unionsrechts oder des Rechts eines Mitgliedstaats, das in
      angemessenem Verhältnis zu dem verfolgten Ziel steht, den Wesensgehalt des Rechts auf Datenschutz wahrt und
      angemessene und spezifische Maßnahmen zur Wahrung der Grundrechte und Interessen der \hyperref[itm:04-1]{betroffenen Person} vorsieht,
      für im öffentlichen Interesse liegende Archivzwecke, für wissenschaftliche oder historische Forschungszwecke oder
@@ -84,13 +84,13 @@
   \item Die in \hyperref[itm:09-1]{Absatz 1} genannten \hyperref[itm:04-1]{personenbezogenen Daten} dürfen zu den in \hyperref[itm:09-2h]
    {Absatz 2 Buchstabe h} genannten Zwecken verarbeitet werden, wenn diese Daten von Fachpersonal oder unter dessen
    Verantwortung verarbeitet werden und dieses Fachpersonal nach dem Unionsrecht oder dem Recht eines Mitgliedstaats
-   oder den Vorschriften nationaler zuständiger Stellen dem Berufsgeheimnis unterliegt, oder wenn die Verarbeitung
+   oder den Vorschriften nationaler zuständiger Stellen dem Berufsgeheimnis unterliegt, oder wenn die \hyperref[itm:04-2]{Verarbeitung}
    durch eine andere Person erfolgt, die ebenfalls nach dem Unionsrecht oder dem Recht eines Mitgliedstaats oder den
    Vorschriften nationaler zuständiger Stellen einer Geheimhaltungspflicht unterliegt.
   \label{itm:09-3}
 
   \item Die Mitgliedstaaten können zusätzliche Bedingungen, einschließlich Beschränkungen, einführen oder
-   aufrechterhalten, soweit die Verarbeitung von \hyperref[itm:04-13]{genetischen}, \hyperref[itm:04-14]{biometrischen} oder Gesundheitsdaten
+   aufrechterhalten, soweit die \hyperref[itm:04-2]{Verarbeitung} von \hyperref[itm:04-13]{genetischen}, \hyperref[itm:04-14]{biometrischen} oder Gesundheitsdaten
    betroffen ist.
   \label{itm:09-4}
 
