--- a/artikel/15.tex
+++ b/artikel/15.tex
@@ -29,7 +29,7 @@
     \label{itm:15-1d}
 
     \item das Bestehen eines Rechts auf Berichtigung oder Löschung der sie betreffenden \hyperref[itm:04-1]{personenbezogenen Daten} oder auf
-     \hyperref[itm:04-3]{Einschränkung der Verarbeitung} durch den Verantwortlichen oder eines Widerspruchsrechts gegen diese Verarbeitung;
+     \hyperref[itm:04-3]{Einschränkung der Verarbeitung} durch den Verantwortlichen oder eines Widerspruchsrechts gegen diese \hyperref[itm:04-2]{Verarbeitung};
     \label{itm:15-1e}
 
     \item das Bestehen eines Beschwerderechts bei einer Aufsichtsbehörde;
@@ -42,7 +42,7 @@
     \item das Bestehen einer automatisierten Entscheidungsfindung einschließlich Profiling gemäß \hyperref[ch:22]
      {Artikel 22} Absätze \hyperref[itm:22-1]{1} und \hyperref[itm:22-4]{4} und -- zumindest in diesen Fällen --
      aussagekräftige Informationen über die involvierte Logik sowie die Tragweite und die angestrebten Auswirkungen
-     einer derartigen Verarbeitung für die \hyperref[itm:04-1]{betroffene Person}.
+     einer derartigen \hyperref[itm:04-2]{Verarbeitung} für die \hyperref[itm:04-1]{betroffene Person}.
     \label{itm:15-1h}
 
   \end{enumerate}
@@ -52,7 +52,7 @@
    Übermittlung unterrichtet zu werden.
   \label{itm:15-2}
 
-  \item Der Verantwortliche stellt eine Kopie der \hyperref[itm:04-1]{personenbezogenen Daten}, die Gegenstand der Verarbeitung sind, zur
+  \item Der Verantwortliche stellt eine Kopie der \hyperref[itm:04-1]{personenbezogenen Daten}, die Gegenstand der \hyperref[itm:04-2]{Verarbeitung} sind, zur
    Verfügung. Für alle weiteren Kopien, die die \hyperref[itm:04-1]{betroffene Person} beantragt, kann der Verantwortliche ein angemessenes
    Entgelt auf der Grundlage der Verwaltungskosten verlangen. Stellt die \hyperref[itm:04-1]{betroffene Person} den Antrag elektronisch, so
    sind die Informationen in einem gängigen elektronischen Format zur Verfügung zu stellen, sofern sie nichts anderes
