--- a/artikel/20.tex
+++ b/artikel/20.tex
@@ -14,12 +14,12 @@
 
   \begin{enumerate}
   
-    \item die Verarbeitung auf einer Einwilligung gemäß \hyperref[itm:06-1a]{Artikel 6 Absatz 1 Buchstabe a} oder
+    \item die \hyperref[itm:04-2]{Verarbeitung} auf einer Einwilligung gemäß \hyperref[itm:06-1a]{Artikel 6 Absatz 1 Buchstabe a} oder
     \hyperref[itm:09-2a]{Artikel 9 Absatz 2 Buchstabe a} oder auf einem Vertrag gemäß \hyperref[itm:06-1b]{Artikel 6
      Absatz 1 Buchstabe b} beruht und
   \label{itm:20-1a}
 
-    \item die Verarbeitung mithilfe automatisierter Verfahren erfolgt.
+    \item die \hyperref[itm:04-2]{Verarbeitung} mithilfe automatisierter Verfahren erfolgt.
   \label{itm:20-1b}
 
   \end{enumerate}
@@ -30,7 +30,7 @@
   \label{itm:20-2}
 
   \item Die Ausübung des Rechts nach \hyperref[itm:20-1]{Absatz 1} des vorliegenden Artikels lässt \hyperref[ch:17]
-   {Artikel 17} unberührt. Dieses Recht gilt nicht für eine Verarbeitung, die für die Wahrnehmung einer Aufgabe
+   {Artikel 17} unberührt. Dieses Recht gilt nicht für eine \hyperref[itm:04-2]{Verarbeitung}, die für die Wahrnehmung einer Aufgabe
    erforderlich ist, die im öffentlichen Interesse liegt oder in Ausübung öffentlicher Gewalt erfolgt, die dem
    Verantwortlichen übertragen wurde.
   \label{itm:20-3}
