--- a/artikel/37.tex
+++ b/artikel/37.tex
@@ -11,7 +11,7 @@
 
   \begin{enumerate}
   
-    \item die Verarbeitung von einer Behörde oder öffentlichen Stelle durchgeführt wird, mit Ausnahme von Gerichten, die
+    \item die \hyperref[itm:04-2]{Verarbeitung} von einer Behörde oder öffentlichen Stelle durchgeführt wird, mit Ausnahme von Gerichten, die
      im Rahmen ihrer justiziellen Tätigkeit handeln,
     \label{itm:37-1a}
 
@@ -20,7 +20,7 @@
      regelmäßige und systematische Überwachung von \hyperref[itm:04-1]{betroffenen Personen} erforderlich machen, oder
     \label{itm:37-1b}
 
-    \item die Kerntätigkeit des Verantwortlichen oder des Auftragsverarbeiters in der umfangreichen Verarbeitung
+    \item die Kerntätigkeit des Verantwortlichen oder des Auftragsverarbeiters in der umfangreichen \hyperref[itm:04-2]{Verarbeitung}
      besonderer Kategorien von Daten gemäß \hyperref[ch:9]{Artikel 9} oder von \hyperref[itm:04-1]{personenbezogenen Daten} über
      strafrechtliche Verurteilungen und Straftaten gemäß \hyperref[ch:10]{Artikel 10} besteht.
     \label{itm:37-1c}
