--- a/artikel/71.tex
+++ b/artikel/71.tex
@@ -6,7 +6,7 @@
 
 \begin{enumerate}
 
-  \item Der Ausschuss erstellt einen Jahresbericht über den Schutz natürlicher Personen bei der Verarbeitung in der
+  \item Der Ausschuss erstellt einen Jahresbericht über den Schutz natürlicher Personen bei der \hyperref[itm:04-2]{Verarbeitung} in der
    Union und gegebenenfalls in Drittländern und internationalen Organisationen. Der Bericht wird veröffentlicht und dem
    Europäischen Parlament, dem Rat und der Kommission übermittelt.
   \label{itm:71-1}
