--- a/artikel/77.tex
+++ b/artikel/77.tex
@@ -9,7 +9,7 @@
   \item Jede \hyperref[itm:04-1]{betroffene Person} hat unbeschadet eines anderweitigen verwaltungsrechtlichen oder gerichtlichen
    Rechtsbehelfs das Recht auf Beschwerde bei einer Aufsichtsbehörde, insbesondere in dem Mitgliedstaat ihres
    Aufenthaltsorts, ihres Arbeitsplatzes oder des Orts des mutmaßlichen Verstoßes, wenn die \hyperref[itm:04-1]{betroffene Person} der
-   Ansicht ist, dass die Verarbeitung der sie betreffenden \hyperref[itm:04-1]{personenbezogenen Daten} gegen diese Verordnung verstößt.
+   Ansicht ist, dass die \hyperref[itm:04-2]{Verarbeitung} der sie betreffenden \hyperref[itm:04-1]{personenbezogenen Daten} gegen diese Verordnung verstößt.
   \label{itm:77-1}
 
   \item Die Aufsichtsbehörde, bei der die Beschwerde eingereicht wurde, unterrichtet den Beschwerdeführer über den Stand
