--- a/artikel/82.tex
+++ b/artikel/82.tex
@@ -10,11 +10,11 @@
    entstanden ist, hat Anspruch auf Schadenersatz gegen den Verantwortlichen oder gegen den Auftragsverarbeiter.
   \label{itm:82-1}
 
-  \item Jeder an einer Verarbeitung beteiligte Verantwortliche haftet für den Schaden, der durch eine nicht dieser
-   Verordnung entsprechende Verarbeitung verursacht wurde. Ein Auftragsverarbeiter haftet für den durch eine
-   Verarbeitung verursachten Schaden nur dann, wenn er seinen speziell den Auftragsverarbeitern auferlegten Pflichten
+  \item Jeder an einer \hyperref[itm:04-2]{Verarbeitung} beteiligte Verantwortliche haftet für den Schaden, der durch eine nicht dieser
+   Verordnung entsprechende \hyperref[itm:04-2]{Verarbeitung} verursacht wurde. Ein Auftragsverarbeiter haftet für den durch eine
+   \hyperref[itm:04-2]{Verarbeitung} verursachten Schaden nur dann, wenn er seinen speziell den Auftragsverarbeitern auferlegten Pflichten
    aus dieser Verordnung nicht nachgekommen ist oder unter Nichtbeachtung der rechtmäßig erteilten Anweisungen des für
-   die Datenverarbeitung Verantwortlichen oder gegen diese Anweisungen gehandelt hat.
+   die Daten\hyperref[itm:04-2]{verarbeitung} Verantwortlichen oder gegen diese Anweisungen gehandelt hat.
   \label{itm:82-2}
 
   \item Der Verantwortliche oder der Auftragsverarbeiter wird von der Haftung gemäß \hyperref[itm:82-2]{Absatz 2}
@@ -23,15 +23,15 @@
   \label{itm:82-3}
 
   \item Ist mehr als ein Verantwortlicher oder mehr als ein Auftragsverarbeiter bzw. sowohl ein Verantwortlicher als
-   auch ein Auftragsverarbeiter an derselben Verarbeitung beteiligt und sind sie gemäß den Absätzen \hyperref[itm:82-2]
-   {2} und \hyperref[itm:82-3]{3} für einen durch die Verarbeitung verursachten Schaden verantwortlich, so haftet jeder
+   auch ein Auftragsverarbeiter an derselben \hyperref[itm:04-2]{Verarbeitung} beteiligt und sind sie gemäß den Absätzen \hyperref[itm:82-2]
+   {2} und \hyperref[itm:82-3]{3} für einen durch die \hyperref[itm:04-2]{Verarbeitung} verursachten Schaden verantwortlich, so haftet jeder
    Verantwortliche oder jeder Auftragsverarbeiter für den gesamten Schaden, damit ein wirksamer Schadensersatz für die
    \hyperref[itm:04-1]{betroffene Person} sichergestellt ist.
   \label{itm:82-4}
 
   \item Hat ein Verantwortlicher oder Auftragsverarbeiter gemäß \hyperref[itm:82-4]{Absatz 4} vollständigen
    Schadenersatz für den erlittenen Schaden gezahlt, so ist dieser Verantwortliche oder Auftragsverarbeiter berechtigt,
-   von den übrigen an derselben Verarbeitung beteiligten für die Datenverarbeitung Verantwortlichen oder
+   von den übrigen an derselben \hyperref[itm:04-2]{Verarbeitung} beteiligten für die Datenverarbeitung Verantwortlichen oder
    Auftragsverarbeitern den Teil des Schadenersatzes zurückzufordern, der unter den in \hyperref[itm:82-2]{Absatz 2}
    festgelegten Bedingungen ihrem Anteil an der Verantwortung für den Schaden entspricht.
   \label{itm:82-5}
