--- a/artikel/89.tex
+++ b/artikel/89.tex
@@ -7,7 +7,7 @@
 
 \begin{enumerate}
 
-  \item Die Verarbeitung zu im öffentlichen Interesse liegenden Archivzwecken, zu wissenschaftlichen oder historischen
+  \item Die \hyperref[itm:04-2]{Verarbeitung} zu im öffentlichen Interesse liegenden Archivzwecken, zu wissenschaftlichen oder historischen
    Forschungszwecken oder zu statistischen Zwecken unterliegt geeigneten Garantien für die Rechte und Freiheiten der
    \hyperref[itm:04-1]{betroffenen Person} gemäß dieser Verordnung. Mit diesen Garantien wird sichergestellt, dass technische und
    organisatorische Maßnahmen bestehen, mit denen insbesondere die Achtung des Grundsatzes der Datenminimierung
@@ -33,8 +33,8 @@
    oder ernsthaft beeinträchtigen und solche Ausnahmen für die Erfüllung dieser Zwecke notwendig sind.
   \label{itm:89-3}
 
-  \item Dient die in den Absätzen \hyperref[itm:89-2]{2} und \hyperref[itm:89-3]{3} genannte Verarbeitung gleichzeitig
-   einem anderen Zweck, gelten die Ausnahmen nur für die Verarbeitung zu den in diesen Absätzen genannten Zwecken.
+  \item Dient die in den Absätzen \hyperref[itm:89-2]{2} und \hyperref[itm:89-3]{3} genannte \hyperref[itm:04-2]{Verarbeitung} gleichzeitig
+   einem anderen Zweck, gelten die Ausnahmen nur für die \hyperref[itm:04-2]{Verarbeitung} zu den in diesen Absätzen genannten Zwecken.
   \label{itm:89-4}
 
 \end{enumerate}
