--- a/artikel/95.tex
+++ b/artikel/95.tex
@@ -4,7 +4,7 @@
 
 \addsec{Text der Verordnung}
 
-Diese Verordnung erlegt natürlichen oder juristischen Personen in Bezug auf die Verarbeitung in Verbindung mit der
+Diese Verordnung erlegt natürlichen oder juristischen Personen in Bezug auf die \hyperref[itm:04-2]{Verarbeitung} in Verbindung mit der
 Bereitstellung öffentlich zugänglicher elektronischer Kommunikationsdienste in öffentlichen Kommunikationsnetzen in der
 Union keine zusätzlichen Pflichten auf, soweit sie besonderen in der Richtlinie 2002/58/EG\todo{Recherche} festgelegten
 Pflichten unterliegen, die dasselbe Ziel verfolgen.
